Published multiple files

--- a/src/site/notes/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧/","noteIcon":""}
 ---
 
 
@@ -1571,11 +1571,6 @@
 
 emmmm思考.jpg
 
-[^1]: 其实这个地方的原对话机翻过来是:
-	【他摇摇头，微笑着。“我知道你钦佩我，但我不知道这是爱。”
-	【克拉克轻轻拂去你脸上的一缕头发。“我不在乎你是否冷漠，只要你爱我。（I don't care if you are cold, as long as you love me.）”他的拇指拂过你的脸颊。】
-	要么为什么我会觉得露姐是小丑，这换谁看到这句话都得这么觉得（）
-
 ## Chapter 9
 
 现在这茬真的不能让露易丝知道了——这视频但凡传出去一点都会立刻变成接下来一年时间里世界范围内最大的头条，露易丝先不说（露易丝甚至已经不是个问题了），正义联盟的公关是肯定要炸的……
@@ -2143,3 +2138,8 @@ emmmm思考.jpg
 ——他回吻着你，翻身让你伏在他胸膛上。双臂环抱着你，他的吻接连落下，手掌在你周身流连。当他终于喘息着结束这个吻时，唇角仍噙着笑意。指尖描摹过你的脸颊，而后托住你的后颈。他垂眸凝望你的眼神盈满爱意与宠溺。"我爱你"他轻声重复着，再度吻住你。】
 
 那既然大超都这么说了，我肯定不能辜负他的恋爱脑，所以就改成合家欢的结局了，而且我发现改成合家欢结局之后甚至好像更符合标题——你就说这帮人打生打死五年就因为大超是个恋爱脑直接快进到合家欢结局这茬小丑不小丑吧……
+
+[^1]: 其实这个地方的原对话机翻过来是:
+	【他摇摇头，微笑着。“我知道你钦佩我，但我不知道这是爱。”
+	【克拉克轻轻拂去你脸上的一缕头发。“我不在乎你是否冷漠，只要你爱我。（I don't care if you are cold, as long as you love me.）”他的拇指拂过你的脸颊。】
+	要么为什么我会觉得露姐是小丑，这换谁看到这句话都得这么觉得（）
