--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题/","noteIcon":""}
 ---
 
 
@@ -2782,6 +2782,7 @@ md什么逼动静.jpg
 那么……现在的问题只剩一个了。
 
 有多大的可能，一个来自异世界的、一直在隐藏自己行踪的、种族不一定是人类的、两度入侵蝙蝠电脑、把稻草人和杀手鳄打的昏迷不醒至今、砸了斯塔格工业两艘飞艇、洗劫了杀手鳄的财产、将正义联盟和沙赞都拉拢到己方阵线的、在资本市场上有大动作、而且和卢瑟有大量合作的人，是个仁义礼智信的英雄？
+
 > [!info] 关于比利·巴特森
 > 潼恩世界线里的巴特森夫妇是在比利十岁时车祸去世的，之后比利和姐姐玛丽被一起送到孤儿院。然而那家孤儿院没过多久就着了大火，导致比利和玛丽失散。玛丽很快就被他们的叔叔找到，比利却不然，不得不当报童维生，然后获得了沙赞的力量，没过几周就被邀请加入正联了，是正联内资历最浅年龄也最小的成员，目前也找到了他的家人。
 > 正联也有在思考干脆让他去少正或者少年泰坦算了……但最后因为比利的年龄实在太小，成年人们还是决定自己看着（）
