--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/","noteIcon":""}
 ---
 
 
@@ -1392,17 +1392,11 @@ ds将本篇分级定为18+，我觉得没那么夸张，但16+是有的，因为
 ## footnote
 
 [^1]: 这其实是一个直径大概40m的地下溶洞，总面积并不大，在蝙蝠洞的下层。
-
 [^2]: 大超你好好想一下为啥你天天撞上阔佬被绑架……
-
 [^3]: 值得一提的是莱在与人交往方面也从不亲近，这也是一种避嫌的表现。不过他这方面不会在性别上有很明显的差异，一般人只会以为这是莱的性格使然，不会想到更深一层去。简单来说就是，布对女性比较亲密但是会避嫌男性，莱则对男女都不算亲近。尽管两人都不太在意对面私底下玩多花，但他们还是会因为彼此的这种小动作而感到开心，这也是两人的一种默契。
-
 [^4]: 这句话其实出自某本蝙蝠中心的本子……虽然它的剧情有点混邪，但是这段翻译我觉得很有水平，原话是“我是最懂得神明降临感受的人。世界上最善良、最甜蜜、最漂亮的生物。而且，你无法想象将他压进床单时的美妙感觉”“就这样，神明离开了，没有人能不对他的飞行姿态心生敬畏”，蝙形容超的两段心声。顺带一提，抛开本子的固有属性不谈，这系列里的蝙蝠侠人设很好，跟孩子们关系不错，跟同伴们也很亲近，长了嘴不说人际关系也非常健康，但得抛开本子的固有属性不谈，要不然上一句话就变成地狱笑话了……
-
 [^5]: 这个地方，布以为超反应过来他是蝙蝠侠了，但其实超没反应过来（乐）或者说他下意识的没把俩人联想到一块去，毕竟这事真的太地狱了。
-
 [^6]: 这俩人身上的香型来自 ai 提出的建议，其实我一般是不会把香水纳入考虑中的，因为香水这东西事多，我还得考虑一下某种味道的香水在文化上适不适合某人用，不过本次剧情需要所以加了。不过我这地方加个注释主要是要说另一件事——为了避免出现 bug ，我特意去查了一下古龙水，于是时隔这么多年，我终于知道古龙水是啥味道的了，好不好闻不确定，但看起来应该挺好吃的……
-
 [^7]: 这地方加个注释是因为这三句是ai改出来的，讲真改的不错，挺工整的。顺带一提改原文的时候ds把into放到了第五和第六个音节上，但我琢磨半天怎么也不觉得into是个抑扬格。总之英文版本的也放在这：
 
 	Go gently now into the tranquil night, 
@@ -1412,18 +1406,10 @@ ds将本篇分级定为18+，我觉得没那么夸张，但16+是有的，因为
 	Calm, calm beside the fading of the light.
 
 [^8]: 药物作用。
-
 [^9]: 一大半是编的……我的天哪布韦恩（）
-
 [^10]: 但是有几个人类正打算把超人圈养变成羔羊诶🤔
-
 [^11]: 确实，本宇宙百特曼的所有装备对于超人来说都没啥防备，但是这只大超道德感高的同时也一直很尊重自己的搭档。毕竟官方也是整出过超正这种剧情拍了两季临到外星人占领地球了正联还互相不知道对方身份的大活的，n52正联在这方面也跟有毛病似的……
-
 [^12]: 讲真你闻到的那是真的血腥味……
-
 [^13]: 有个短篇漫画，内容是讲大超不在的正义联盟是什么样的，然后联盟开会讨论卢瑟对超人类的态度时蝙蝠就蹲在控制台上——啊好可爱。
-
 [^14]: 讲真我也觉得很荒谬……
-
 [^15]: 提是类似 92 版的背景设定（）啊可怜的提
-
