--- a/src/site/notes/02 小说/03 dc/01 已完成/【超蝙】超人之死.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【超蝙】超人之死.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙】超人之死/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/已完成","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙】超人之死/","noteIcon":""}
 ---
 
 
@@ -384,4 +384,3 @@
 但这些都忍住了，主要是最后的结局——俩人殉情（不是）双死，最后一幕是披风沉入北冰洋底……不是，我寻思着加缪是个法国人，超蝙是俩美国人，ds你丫的是在经过了怎样的寻思之后才能写出一个如此日本的情节的啊（痛苦面具）我真是服了什么太宰治套壳文学——倒也不是说我对他本人有什么性格方面的意见（而且讲真书挺好看的，但只推荐短篇，中长篇慎读，尤其不推荐十五岁以下的读者阅读。太宰治的精神状态虽然不差但很不稳定，他又是写私小说的，很容易把读者带入他自己的情绪里，短篇还好，长篇格外严重——以及本条建议仅针对无精神疾病的读者），毕竟太宰治本人的性格和他的原生家庭以及当时的日本社会现状都有很深的关联，不能独立看待，但主要是你让两个美国人塑造出来的美国英雄角色搞这种“向死而生”式的自杀桥段……
 
 （发出尖锐的爆鸣.jpg）
-
