--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知 -正联批注版/","noteIcon":""}
 ---
 
 
@@ -121,10 +121,10 @@
 2.4 特殊情况处理
 	2.4.1 如果超人正在执行紧急任务或在治疗伤员/修复重要设施，请务必远离其所在区域，向导会进行提示。
 	2.4.2 在任何情况下，严禁对超人做出以下行为：
-	    - 指责其“不够温暖”或“冷漠”；
-	    - 质疑其“是否真的光明/温暖”；
-	    - 要求其“证明自己的力量”；
-	    - 或其他类似行为。
+		- 指责其“不够温暖”或“冷漠”；
+		- 质疑其“是否真的光明/温暖”；
+		- 要求其“证明自己的力量”；
+		- 或其他类似行为。
 	2.4.3 如果您在超人附近出现包括但不仅限于“皮肤异常干燥、发红或出现类似晒伤的刺痛感”“视野中出现无法解释的、持续存在的强光残影且闭眼后仍可见”“感到莫名的、指向性的巨大压迫感或引力感”等，请立即向向导说明情况，向导将带您离开。
 2.5 参观后续
 	2.5.1 参观结束后，若您间断性的看到不明光源，并伴随轻微头痛、平衡感失调或方向感错乱的症状，这是正常的，请不要担心，通常在几天的休息后症状就会消失。
