--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】瞭望塔游客须知/","noteIcon":""}
 ---
 
 
@@ -50,10 +50,10 @@
 2.4 特殊情况处理
 	2.4.1 如果超人正在执行紧急任务或在治疗伤员/修复重要设施，请务必远离其所在区域，向导会进行提示。
 	2.4.2 在任何情况下，严禁对超人做出以下行为：
-	    - 指责其“不够温暖”或“冷漠”；
-	    - 质疑其“是否真的光明/温暖”；
-	    - 要求其“证明自己的力量”；
-	    - 或其他类似行为。
+		- 指责其“不够温暖”或“冷漠”；
+		- 质疑其“是否真的光明/温暖”；
+		- 要求其“证明自己的力量”；
+		- 或其他类似行为。
 	2.4.3 如果您在超人附近出现包括但不仅限于“皮肤异常干燥、发红或出现类似晒伤的刺痛感”“视野中出现无法解释的、持续存在的强光残影且闭眼后仍可见”“感到莫名的、指向性的巨大压迫感或引力感”等，请立即向向导说明情况，向导将带您离开。
 2.5 参观后续
 	2.5.1 参观结束后，若您间断性的看到不明光源，并伴随轻微头痛、平衡感失调或方向感错乱的症状，这是正常的，请不要担心，通常在几天的休息后症状就会消失。
@@ -63,42 +63,42 @@
 3.0 基础介绍
 	蝙蝠侠是正义联盟的战术核心。在与蝙蝠侠接触时，请严格遵守以下规定，确保您的安全。
 3.1 观察与防护
-    3.1.1 严禁在任何时间任何、地点主动寻找蝙蝠侠，或产生强烈的、想要主动寻找蝙蝠侠的欲望。若您非常想要见蝙蝠侠一面，请告知向导，向导会替您寻找。
-    3.1.2 在您游览过程中，向导会确保您所在区域始终照明充足（亮度不低于300 lux）。若您发现某区域照明突然变得昏暗或不稳定，请立刻移开视线并告知向导。这种异常通常都是无害的。
-    3.1.3 参观过程中绝对禁止使用任何形式的强光设备（如闪光灯、强光手电）照射蝙蝠侠或其附近的阴影区域。 这被视为极其严重的挑衅行为。
-    3.1.4 若您无意中感觉与蝙蝠侠的“目光”有短暂接触，或感到其阴影似乎“动了一下”，请**立刻移开视线，看向明亮、色彩鲜艳的物体（如向导的制服或工作证）**，并深呼吸数次。通常不适感会迅速消退。若恐慌感持续增强，请参考3.4.1条款。
+	3.1.1 严禁在任何时间任何、地点主动寻找蝙蝠侠，或产生强烈的、想要主动寻找蝙蝠侠的欲望。若您非常想要见蝙蝠侠一面，请告知向导，向导会替您寻找。
+	3.1.2 在您游览过程中，向导会确保您所在区域始终照明充足（亮度不低于300 lux）。若您发现某区域照明突然变得昏暗或不稳定，请立刻移开视线并告知向导。这种异常通常都是无害的。
+	3.1.3 参观过程中绝对禁止使用任何形式的强光设备（如闪光灯、强光手电）照射蝙蝠侠或其附近的阴影区域。 这被视为极其严重的挑衅行为。
+	3.1.4 若您无意中感觉与蝙蝠侠的“目光”有短暂接触，或感到其阴影似乎“动了一下”，请**立刻移开视线，看向明亮、色彩鲜艳的物体（如向导的制服或工作证）**，并深呼吸数次。通常不适感会迅速消退。若恐慌感持续增强，请参考3.4.1条款。
 3.2 空间导航与移动
-    3.2.1 **进入瞭望塔核心区域后，向导会向您发放一个“蝙蝠指南针”。此设备是您在瞭望塔内安全通行的关键，必须全程妥善保管并开启。**
-        3.2.1.1 指南针屏幕将显示简洁的箭头指示通往下一个参观点的最短安全路径。**请严格遵循箭头指示行走，严禁偏离路径或探索未标注区域。**
-        3.2.1.2 若指南针屏幕出现剧烈闪烁、雪花、或指示箭头疯狂旋转，请**立刻停在原地，闭上眼睛**，并大声呼唤向导。在向导确认安全前，严禁移动或睁眼。
-        3.2.1.3 指南针由特殊材料制成，**严禁尝试拆卸、研究或对其拍照。** 参观结束后需完整归还给向导。
-    3.2.2 行走时，请时刻留意您的前方和侧方视野盲区（如拐角、设备后方、打开的柜门内侧）。**在接近此类区域时，请刻意放慢脚步，并发出适度的声响（如轻声咳嗽、脚步声稍重）。** 这有助于避免意外碰撞。
-    3.2.3 若您发现自己在重复行走相同的区域（例如，连续三次经过同一扇标有“Zeta Tube 03”的门），或感觉走廊的长度/方向发生了无法解释的变化，**请立刻停下，检查您的蝙蝠指南针。**
-        3.2.3.1 若指南针指示清晰，请**严格按照其新指示的方向行走，即使它指向一堵墙或一个看似封闭的空间（在接近时，通道通常会显现）**。
-        3.2.3.2 若指南针失效（见3.2.1.2），请按该条款处理。
-        3.2.3.3 **绝对禁止尝试自行寻找出路或质疑空间合理性。** 耐心等待向导处理。
+	3.2.1 **进入瞭望塔核心区域后，向导会向您发放一个“蝙蝠指南针”。此设备是您在瞭望塔内安全通行的关键，必须全程妥善保管并开启。**
+		3.2.1.1 指南针屏幕将显示简洁的箭头指示通往下一个参观点的最短安全路径。**请严格遵循箭头指示行走，严禁偏离路径或探索未标注区域。**
+		3.2.1.2 若指南针屏幕出现剧烈闪烁、雪花、或指示箭头疯狂旋转，请**立刻停在原地，闭上眼睛**，并大声呼唤向导。在向导确认安全前，严禁移动或睁眼。
+		3.2.1.3 指南针由特殊材料制成，**严禁尝试拆卸、研究或对其拍照。** 参观结束后需完整归还给向导。
+	3.2.2 行走时，请时刻留意您的前方和侧方视野盲区（如拐角、设备后方、打开的柜门内侧）。**在接近此类区域时，请刻意放慢脚步，并发出适度的声响（如轻声咳嗽、脚步声稍重）。** 这有助于避免意外碰撞。
+	3.2.3 若您发现自己在重复行走相同的区域（例如，连续三次经过同一扇标有“Zeta Tube 03”的门），或感觉走廊的长度/方向发生了无法解释的变化，**请立刻停下，检查您的蝙蝠指南针。**
+		3.2.3.1 若指南针指示清晰，请**严格按照其新指示的方向行走，即使它指向一堵墙或一个看似封闭的空间（在接近时，通道通常会显现）**。
+		3.2.3.2 若指南针失效（见3.2.1.2），请按该条款处理。
+		3.2.3.3 **绝对禁止尝试自行寻找出路或质疑空间合理性。** 耐心等待向导处理。
 3.3 接触与物品
-    3.3.1 **绝对禁止触碰蝙蝠侠的身体、制服或任何其可能携带的物品（如飞镖、绳索、小型电子设备）。** 即使物品看似遗落在地，也严禁捡拾或触碰。
-    3.3.2 **严禁在蝙蝠侠可能停留的区域（即使他当时不在场）随意触碰设备、操作台面或倚靠墙壁。** 这些区域可能残留其存在的影响。
-    3.3.3 若蝙蝠侠主动递交给您物品（可能性极低），**请保持双手自然下垂，目视前方地面，并用清晰但平静的语气说：“感谢您，蝙蝠侠先生，但我不能接受。”** 向导会代为处理该物品。
-    3.3.4 若您不慎接触到蝙蝠侠接触过的表面或物品（例如，在向导指引下使用了他刚用过的操作台），请**立刻告知向导**。向导会提供清洁湿巾并进行简短的心理安抚程序。
+	3.3.1 **绝对禁止触碰蝙蝠侠的身体、制服或任何其可能携带的物品（如飞镖、绳索、小型电子设备）。** 即使物品看似遗落在地，也严禁捡拾或触碰。
+	3.3.2 **严禁在蝙蝠侠可能停留的区域（即使他当时不在场）随意触碰设备、操作台面或倚靠墙壁。** 这些区域可能残留其存在的影响。
+	3.3.3 若蝙蝠侠主动递交给您物品（可能性极低），**请保持双手自然下垂，目视前方地面，并用清晰但平静的语气说：“感谢您，蝙蝠侠先生，但我不能接受。”** 向导会代为处理该物品。
+	3.3.4 若您不慎接触到蝙蝠侠接触过的表面或物品（例如，在向导指引下使用了他刚用过的操作台），请**立刻告知向导**。向导会提供清洁湿巾并进行简短的心理安抚程序。
 3.4 特殊情况处理
-    3.4.1 **若您感到莫名且强烈的恐惧感、被害妄想（如感觉被监视、被跟踪、即将受到攻击，且无实际依据）、或对黑暗产生急性、无法控制的恐慌，请立刻：**
-        - **停止移动。**
-        - **闭上眼睛。**
-        - **大声、清晰地连续呼喊向导的名字（如“向导史密斯！我需要帮助！”）。**
-        - 向导会迅速赶到您身边并提供帮助（通常是引导您前往明亮、开放的区域并进行认知校准）。**在向导明确指示前，严禁睁眼或自行移动。**
-    3.4.2 若您目睹蝙蝠侠似乎“融入”阴影或墙壁，或在您视野边缘“消失”，**请勿表现出惊讶或试图寻找。** 继续您当前的行动，或遵循蝙蝠指南针/向导的指示。
-    3.4.3 若您感觉身体某部分（通常是腿部）突然被冰冷、粘稠的“黑暗”短暂包裹或拉扯，随后又被释放，**请保持镇定，不要尖叫或剧烈挣扎。** 这通常是无害的短暂现象。检查身体无碍后，继续行程。若感觉不适，告知向导。
-    3.4.4 **在任何情况下，严禁对蝙蝠侠做出以下行为：**
-        - 询问其真实身份或起源；
-        - 质疑其“是否真的存在”或“是否只是个传说”；
-        - 模仿其声音或标志性动作（如压低嗓音说话、展开双臂模仿披风）；
-        - 声称“自己不怕他”或试图证明这一点；
-        - 或其他任何可能被解读为挑衅、窥探或试图“解构”其存在的行为。
+	3.4.1 **若您感到莫名且强烈的恐惧感、被害妄想（如感觉被监视、被跟踪、即将受到攻击，且无实际依据）、或对黑暗产生急性、无法控制的恐慌，请立刻：**
+		- **停止移动。**
+		- **闭上眼睛。**
+		- **大声、清晰地连续呼喊向导的名字（如“向导史密斯！我需要帮助！”）。**
+		- 向导会迅速赶到您身边并提供帮助（通常是引导您前往明亮、开放的区域并进行认知校准）。**在向导明确指示前，严禁睁眼或自行移动。**
+	3.4.2 若您目睹蝙蝠侠似乎“融入”阴影或墙壁，或在您视野边缘“消失”，**请勿表现出惊讶或试图寻找。** 继续您当前的行动，或遵循蝙蝠指南针/向导的指示。
+	3.4.3 若您感觉身体某部分（通常是腿部）突然被冰冷、粘稠的“黑暗”短暂包裹或拉扯，随后又被释放，**请保持镇定，不要尖叫或剧烈挣扎。** 这通常是无害的短暂现象。检查身体无碍后，继续行程。若感觉不适，告知向导。
+	3.4.4 **在任何情况下，严禁对蝙蝠侠做出以下行为：**
+		- 询问其真实身份或起源；
+		- 质疑其“是否真的存在”或“是否只是个传说”；
+		- 模仿其声音或标志性动作（如压低嗓音说话、展开双臂模仿披风）；
+		- 声称“自己不怕他”或试图证明这一点；
+		- 或其他任何可能被解读为挑衅、窥探或试图“解构”其存在的行为。
 3.5 参观后续
-    3.5.1 参观结束后，若您短暂地对黑暗环境感到轻微不安或做几个与阴影、迷路相关的噩梦，这是正常的心理调节过程，通常在几天内会消失。
-    3.5.2 若您出现**持续性的强烈恐惧（尤其是对特定形状的阴影、空旷的走廊、角落）、被害妄想、空间方向感长期混乱（例如在家中频繁迷路），或反复做内容高度一致且令人极度不适的噩梦**，请**立即**拨打+1 (800) 882-8693报告您的基本信息和症状。我们的认知危害处理小组将为您提供专业干预。
+	3.5.1 参观结束后，若您短暂地对黑暗环境感到轻微不安或做几个与阴影、迷路相关的噩梦，这是正常的心理调节过程，通常在几天内会消失。
+	3.5.2 若您出现**持续性的强烈恐惧（尤其是对特定形状的阴影、空旷的走廊、角落）、被害妄想、空间方向感长期混乱（例如在家中频繁迷路），或反复做内容高度一致且令人极度不适的噩梦**，请**立即**拨打+1 (800) 882-8693报告您的基本信息和症状。我们的认知危害处理小组将为您提供专业干预。
 
 ## 4 条款W
 
