--- a/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质.md
@@ -1,24 +1,20 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正义联盟规则怪谈】设定及正义联盟的存在本质/","noteIcon":""}
 ---
 
-
-1. 正义联盟的规则怪谈，核心思想是正义联盟的成员都是异常实体但对人无害甚至很友善，而瞭望塔是他们的巢穴，但需要参观者遵循一定的规则要不然可能会死的很惨（不是联盟成员们故意的，是他们的真实身份本来就是某种很容易弄死人类的实体，他们很友善了但确实是有生理限制），名字的话要不就叫《瞭望塔参观须知》……
+1. 核心思想是正义联盟的成员都是异常实体但对人无害甚至很友善，而瞭望塔是他们的巢穴，但人类面对他们的时候很容易一不小心死的很惨，不是联盟成员们故意的，是他们的真实身份本来就是某种很容易弄死人类的实体，他们很友善了但确实是有生理限制……
 2. 超人本质是一颗燃烧的恒星，蝙蝠的话是一个不可名状的扭曲阴影，女侠是真言之力，哈尔是绿光，闪电侠是神速力，海王是水的化身，火星猎人是一种只有思维存在的模因这样子。
-3. 这本手册在设定上来说应该是某个异常收容组织写出来的，正义联盟主动配合了他们的收容，但要求就是他们不能干涉正义联盟的日常英雄行径，而这个组织也答应了，毕竟这帮实体虽然挺吓人的但一直在努力帮忙收容其他实体，也是个好盟友。然后游客去瞭望塔参观属于收容的一环，因为正义联盟很喜欢和人类接触，也很喜欢人类在它们的巢穴（瞭望塔）参观，所以让游客去瞭望塔属于稳定正义联盟情绪的收容措施的一部分，然后游客对于这些真相是一无所知的，他们眼中的正义联盟就是普通版本的正义联盟，收容组织也不能把真相透露给游客们，只能把应该做什么和不该做什么整理成手册，万一遇上灵性特别高的游客他们至少不会直接死那……
-4. 顺带一提如果有人死瞭望塔了的话正义联盟会很伤心的。
-5. 收容组织名叫utn理事会，是一个依靠研究异常而不断发展到存在于所有时间所有空间的终点的一个组织，也是整个世界观的实际管理者，主要负责给无穷无尽的世界线处理突发异常情况，算是个覆盖整个虚空的紧急救援组织，utn的意思是“understand，transform，neutralize”，“理解、转化、规范”，致力于收容并解决异常所带来的各类混乱，并且他们积极寻求将异常现象融入或改造成可以造福文明社会的形态。“理事会坚信：任何看似超乎寻常的存在都有其内在规律可循，通过不懈的努力与探究，终能为文明带来福祉与和平。”
-6. 理事会本体存在于一个更高的纬度上，在这个地球的是个分部。本来他们是没有分部这个行为的，这种异常实体会被他们直接带回总部收容，但这个宇宙的正义联盟确实很爱地球，在发现自己对地球的危险性之后他们直接找到了理事会拜托理事会帮个忙，理事会表示卧槽还有这种设定的正义联盟（他们之前已经接触过很多版本的正联了），不过总之还是很乐意的就过来帮忙了。
-7. 总体介绍（由理事会记录）
+3. 普通人对于这些真相是一无所知的，他们眼中的正义联盟就是普通版本的正义联盟。
+4. 总体介绍
 	1. 根据我们的观察，正义联盟的成员应该是一群外神，英雄代号是他们的称号或者说神名，至于说他们的真名……出于保护个神隐私的目的，在此不便透露。
 	2. 是的，他们有人类身份，同样出于保护个神隐私的目的，在此不便透露。
-	3. 联盟成员目前是7+1的状态，超人、蝙蝠侠、神奇女侠、绿灯侠、闪电侠、海王、火星猎人和夜翼。
-8. 能力档案。
+	3. 联盟成员目前是7+1的状态：超人、蝙蝠侠、神奇女侠、绿灯侠、闪电侠、海王、火星猎人和夜翼。
+5. 能力档案。
 	1. 超人
 		1. 一颗处于稳定主序星阶段的恒星。
 		2. 太阳还有什么好说的，太阳就是太阳……
 	2. 蝙蝠侠
-		1. 一个源自人类集体恐惧潜意识的概念性阴影聚合体，无固定形态，常态下呈现为包裹在拟态“装甲”内的不定形暗影。
+		1. 一个源自智慧生命集体恐惧潜意识的概念性阴影聚合体，无固定形态，常态下呈现为包裹在拟态“装甲”内的不定形暗影。
 		2. 对于其接触过的物品、长期停留的区域，人类可能产生无端恐慌或被害妄想，一般无害。
 		3. 其阴影本质使其能融入任何黑暗角落或视线死角，移动时可能被人类忽略，导致碰撞（若阴影有实体）或被吞噬（但一般很快会被吐出来，除非他在走神）。
 		4. 认知其本质可能导致观察者心智被恐惧吞噬，引发永久性精神错乱甚至进一步导致身体上的崩溃，成为阴影的一部分。
@@ -39,7 +35,7 @@
 		2. 当其在高速运动状态时，靠近且与其发生相对位移的生物体皆会因无法承受其携带的时空剪切力而瞬间解离为基本粒子，但好消息是这个范围很小，只到他体表外二十厘米。
 		3. 其高速移动会在局部制造短暂的时间流混乱。靠近其路径可能经历时间感知错乱（几秒感觉像几小时或反之）、看到短暂的时间残影（可能来自过去或可能的未来），甚至被意外卷入时间涡流，导致部分或全部身体组织时间线错乱。
 		4. 理论上，其速度上限突破可能导致局部物理真空失稳，虽然目前尚未观测到。爱因斯坦在坟墓里翻滚.jpg
-		5. “闪电”是时空摩擦产生的能量释放，接触结果参见第一条。
+		5. “闪电”是时空摩擦产生的能量释放，接触结果参见第2条。
 	6. 海王
 		1. 水体（海洋、河流、地下水甚至生物体内水分）的集体意识与物理化身，目前看来只要是水就能控制，距离疑似是无限的。
 		2. 海王（×）水元素领主（✓）
@@ -57,8 +53,64 @@
 		1. 很难描述他是个什么东西，因为夜翼是蝙蝠侠和超人的“子嗣”，至少正义联盟的内部如此认知。虽然我很不理解为什么超人和蝙蝠侠力量失控融合之后的产物会被他们认作子嗣，但这个孩子目前确实是瞭望塔的新成员。
 		2. 表观上来说，夜翼是“一团非常明亮的阴影”，这句子哪怕加上八行注释他也是个病句，但确实如此。当你注视这个孩子的时候，这个认知就会自然而然的浮现在你的脑海里。
 		3. 考虑到已经有两位同事因为试图去思考“这到底是个什么玩意儿”导致大脑熟了，我不建议任何人再去思考夜翼到底是个什么玩意儿。（且由于记忆未及时上传，以这两位的探索精神我估计他们过段时间还得被烧一次。）
-		4. 夜翼继承了蝙蝠侠和超人的力量，但有微妙的不同。他的能力上没有任何认知方面的危害（思考他的存在本质这一条不论的话）。
+		4. 夜翼继承了蝙蝠侠和超人的力量，但有微妙的不同。他的能力上没有任何认知方面的危害，思考他的存在本质这一条不论的话。
 		5. 他可以化身阴影神出鬼没（一般用来吓唬人）或者变成一颗功率更低的太阳（但对于人类来说直观感受没什么区别，都是瞬间气化，致敬我那富有探索精神的同事），或者这两件事同时发生。
 		6. 他没有空间方面的能力，但从来没在瞭望塔上迷过路；他所化身的阴影也会把人吞进去，但似乎没有同化的能力，这让他看起来更加无害，虽然夜翼觉得这很好玩所以会主动吞人。
 		7. 蝙蝠侠说这是因为他“还在幼年期”，喜欢吞人是在练习能力，不过目前确实无害；超人补充说等他再大一些的时候蝙蝠侠就会教他控制他的能力了，到时候得把这些习惯都改过来才行。
 		8. ……外神子嗣真可怕。
+
+## 🦇 一、关于“伪经”与蝙蝠隐秘教团
+1. 教团名称与性质
+	- 名称：暗影慈悲会（The Order of Merciful Shadow）或沉默守望者（The Silent Watchers）
+	- 性质：非邪教，而是秘密结社式的慈善组织。他们不祭祀、不献祭，而是以“践行主的意志”为名，从事慈善、救援、心理辅导等活动。
+	- 教义核心：认为蝙蝠侠（他们称为“暗影之主”或“沉默之父”）是恐惧中诞生的慈悲。他本可吞噬众生，却选择守护人性，是“黑暗中的光”。
+	- 圣经：《影之书》（Liber Umbrarum），内容是对蝙蝠侠行为的观察记录、哲学阐释和赞美诗，文风类似《圣经》或《死海古卷》，但极其社死。
+		- 别名《影之蝠音》（确信)。
+		- 不行了我一想到影之书的别名叫《影之蝠音》就想笑。
+		- 当年埃利亚斯创立蝙蝠教顺便把圣经给正主看的时候蝙蝠的表情一定会很精彩。
+		- 顺带一提这本圣经是随着蝙蝠侠的经历更新的，最开始只有他和哥谭同伴，后来逐渐加入了超人、正义联盟、迪克以及蝙蝠家族的其他孩子，嚯还是连载版本。不过除了正义联盟、迪克、阿尔弗雷德、卢修斯和戈登之外其他人都不知道这本圣经的存在，这个密教也一直严格控制着圣经的流通范围（毕竟记载了很多正义联盟的隐秘吗，泄密这事对正义联盟可能是没啥影响，但san值太低的人类可能会死一片）。
+2. 关键人物
+	- 创始人/领袖：埃利亚斯·布莱克（Elias Black），哥谭富商，年轻时被蝙蝠侠所救，灵视高、SAN值高，看穿蝙蝠本质却未被摧毁，反而被其“人性”感动。
+	- “先知”：
+		- 詹姆斯·戈登：因目睹蝙蝠诞生过程而被视为“第一见证人”。
+		- 卢修斯·福克斯：因看穿本质并选择协助而被视为“智慧之柱”。
+		- “圣女”：芭芭拉·戈登（完全不知情），因她的勇气、智慧与蝙蝠家的紧密联系而被崇拜。
+3. 与正义联盟的关系
+	- 盟友：提供资金、情报、医疗支援，甚至协助处理一些超自然事件的后勤工作。
+	- 尴尬点：
+		- 经常给蝙蝠侠送手织蝙蝠斗篷、蝙蝠形状的圣饼等礼物。
+		- 在《影之书》里详细描写了超蝙的“神圣结合”与长子迪克的诞生（蝙蝠侠：……）。
+		- 试图为达米安、杰森等“主所眷顾之人”举行庇护仪式（被婉拒）。
+
+## 🌌 二、英雄本质与人性来源的完善设定
+
+| 英雄         | 本质                          | 人性来源                                                                 | 人类身份构建                                 |
+|--------------|-------------------------------|--------------------------------------------------------------------------|----------------------------------------------|
+| **超人**     | 恒星（G 2 V 型主序星）           | 被肯特夫妇抚养的经历赋予了他“爱”与“道德”                                 | 克拉克·肯特，记者                           |
+| **蝙蝠侠**   | 集体恐惧阴影+小布鲁斯的意识   | 吞噬小布鲁斯后继承其情感与记忆                                           | 布鲁斯·韦恩，富豪                           |
+| **神奇女侠** | “真实”概念的具现化            | 数千年观察人类，逐渐理解并欣赏“真实”背后的复杂人性                         | 戴安娜·普林斯，考古学家                     |
+| **绿灯侠**   | 灯团能量本体（所有色光）      | 能量本身具有意志属性，模仿并最终理解了“勇气”                             | 哈尔·乔丹，试飞员（社会关系简单）           |
+| **闪电侠**   | 神速力的物理化身              | 在无限时间中体验众生悲欢，自发产生同情心                                 | 巴里·艾伦，刑警（社会关系简单）             |
+| **海王**     | 水体意识集合体                | 漫长岁月中聆听沉船、眼泪、生命诞生，逐渐共鸣                             | 亚瑟·库里，灯塔看守人之子                   |
+| **火星猎人** | 自洽的思维模因                | 在感染无数思维后，整合出一个稳定、温和的“人格”                           | 约翰·琼斯，侦探（身份完全虚构）             |
+
+## 🧩 三、其他设定补充建议
+
+### 1. 阿尔弗雷德的存在
+- 是蝙蝠侠用阴影力量创造的**实体化记忆投影**，融合了托马斯与玛莎·韦恩的人格。
+- **他知道自己不是人类**，但选择继续扮演“管家”角色，是为了守护布鲁斯的人性。
+- 如果蝙蝠侠力量失控，阿尔弗雷德会**最先消散**。
+
+### 2. 天堂岛、亚特兰蒂斯、火星
+- 均为**力量衍生出的幻象**，用于解释三人的来源。
+- 戴安娜的“亚马逊族”其实是**真实之力影响下产生的狂热追随者**，后来被解散。
+- 亚瑟的“亚特兰蒂斯”是**水体意识编织的集体梦境**。
+- 荣恩的“火星”是**模因感染早期产生的一个文明废墟记忆**。
+
+### 3. 闪电家族 & 绿灯军团
+- 他们是**外神分享力量的人类**，本质仍是人，但连接深厚。
+- 沃利比巴里快是因为：**巴里有意压制速度**，否则会撕裂时空；沃利是纯粹人类，更适配神速力。
+
+### 4. 瞭望塔
+- 是**七种外神力量共同构筑的巢穴**，本身已活化，有一定意识（表现为“卡珊德拉”）。
+- 会无意识修改规则、创造空间（如水族馆）、保护“家人”。
