--- a/src/site/notes/02 小说/03 dc/02 进行中/【玩家正联】非人之物.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【玩家正联】非人之物.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【玩家正联】非人之物/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【玩家正联】非人之物/","noteIcon":""}
 ---
 
 
@@ -538,10 +538,6 @@
 “我可是超人。”超人很有自信的点点头，“这种程度的空间异常没什么好担心的。”
 
 🦸🏻🦇❤️🚦⚡️🔥🧜🏻‍♂️🖥️🌩️⚖️🌩️🖥️🧜🏻‍♂️🔥⚡️🚦❤️🦇🦸🏻
-
-[^1]: 这地方两人交谈的原话是“你也知道我在买了翡翠暮光dlc之后角色就能杀人了，操作不熟练一下子没控制住”。
-
-[^2]: 没记错的话巴里是没有能开屠杀的黑化线的……闯大祸都是类似闪点这种世界线覆写。以及红死神确实给我留下了相当深刻的印象，正联良心名副其实，巴里未尝不是一款美强惨（确信）
 
 其实我本来没想这个点更新这个的，事实上最近在忙活另一篇和基金会联动的文档，但遇到了件事所以这口槽我一定得吐出来——
 
@@ -1786,3 +1782,6 @@
 布鲁斯：“……习惯了而已。”
 
 明舒自动把这句话理解成了“菜就多练”，
+
+[^1]: 这地方两人交谈的原话是“你也知道我在买了翡翠暮光dlc之后角色就能杀人了，操作不熟练一下子没控制住”。
+[^2]: 没记错的话巴里是没有能开屠杀的黑化线的……闯大祸都是类似闪点这种世界线覆写。以及红死神确实给我留下了相当深刻的印象，正联良心名副其实，巴里未尝不是一款美强惨（确信）
