--- a/src/site/notes/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性/","noteIcon":""}
 ---
 
 
@@ -70,4 +70,3 @@
 没有了，显而易见。
 
 就这样，布鲁斯跟着蝙蝠侠回了韦恩庄园。目前的时间线颇为微妙，提姆尚且担任着罗宾的职责，对于突然出现的第二个布鲁斯也不过是有些诧异，但仅限于此。
-
