--- a/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】人间之……？.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】人间之……？.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】人间之……？/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】人间之……？/","noteIcon":""}
 ---
 
 
@@ -286,6 +286,7 @@
 大部分情况下都是如此，在正义联盟结束某一次大规模的战役或者完成一次大规模的自然灾害救援行动之后，美国各大媒体就会发布相应的新闻稿。但一般来说这种新闻首发的地方不会是白宫——之所以这次是白宫，是因为白宫公布了一段视频。
 
 正义联盟在太空战斗的视频——或者，准确来说，超人只用了不到三十秒就将布莱尼亚克的心智核心彻底粉碎的视频以及在宇宙中布莱尼亚克的飞船无声爆炸的场面，并且附带一段新闻稿。
+
 > 在今天清晨发布的官方声明中，总统高度评价了正义联盟在本次星际防御行动中所展现出的卓越能力，特别指出美国国家英雄——超人在此次危机中的果断行动与决定性胜利。
 > “胜利再一次站在了正义的一方，而这份胜利，正是由美国人民最可信赖的守护者——超人，亲手带来的。今天，我们不仅保卫了地球，也再次证明了美国在全球所代表的力量、智慧与领导力。”
 > 声明称，本次外星威胁（布莱尼亚克）在尚未进入地球大气层时即被迅速、精准且完全压制，其核心智能单元在作出任何敌意行为之前就被“判明威胁性质并即时中和”，体现了以超人为代表的“前沿威慑力量”所拥有的战略决断力。
@@ -295,6 +296,7 @@
 说真的，这段新闻里的内容世界上的大多数人已经麻木了，毕竟在金毛二进宫之后白宫的新闻里就充斥着赢，但是白宫公布的那段视频确实是引起了轩然大波，被世界上几乎所有的媒体争相转载。和以往类似新闻里西方媒体充斥着的“但代价是什么”不同，这一次是清一色的正面报道，几乎每一家媒体都在称赞超人保护了地球的壮举，尤其是美国媒体，那可真是言辞优美热情洋溢，普利策看了都得从坟里爬出来给记者颁奖的程度。
 
 以其中一家举例（因为原文内容太长了所以我们仅节选如下）：
+
 > 今日，地球再次面临来自深空的严峻威胁，臭名昭著的星际侵略者布莱尼亚克，以其对文明的掠夺与毁灭行径而恶名昭彰，悍然对地球发起了进攻。其意图之险恶，力量之强大，对全球安全构成了前所未有的挑战。
 > 值此危急存亡之际，美国的力量与意志再次得到了彰显。我们引以为傲的守护者——超人，以无与伦比的勇气与无可匹敌的力量挺身而出，直面并粉碎了这一威胁。白宫今日公布的影像资料清晰展示了超人如何以令人震撼的效率与绝对的掌控力，在极短时间内彻底瓦解了布莱尼亚克的入侵。他的行动迅捷如雷霆，精准如手术刀，确保了地球及其居民免受了一场潜在的灭顶之灾。
 > ……（省略一长段对超人的吹捧）
