--- a/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/","noteIcon":""}
 ---
 
 
@@ -35,9 +35,9 @@
 
 以上。
 
----
+## 前言
 
-脑洞及预警见 [【领主】为了避免地球爆炸，超人将以领主形态出击·脑洞及预警 ](https://molan39329.lofter.com/post/8486d5dc_2bdb3d02f?incantation=rz81hac9EWXe)
+脑洞及预警见 [【领主】为了避免地球爆炸，超人将以领主形态出击·脑洞及预警](https://molan39329.lofter.com/post/8486d5dc_2bdb3d02f?incantation=rz81hac9EWXe)
 
 另注：因为背景设定是世界末日临近英雄们压力很大，所以不出意外的话应该会有很多地狱笑话……
 
@@ -1252,6 +1252,7 @@
 有想过以这个有点过于黑色幽默的世界设定写点文，毕竟这个世界设定有一种平静的疯癫感（火焰旋风烤肉真是绝了，联动世界观内一个叫做【卡尔的烹饪小贴士】的公开电视节目更是绝妙地狱），但暂时还没啥灵感，先放着吧。
 
 ……
+
 1. 钢骨的私密日记：
 
 8:00AM
@@ -1277,11 +1278,13 @@
 关于笑点解析：本世界观下的灰蝙蝠控制欲强的令人发指，整过最狠的活是在正联团建的时候为了秀恩爱，把超人公主抱蝙蝠侠的4k视频投放到了太平洋底下某个反抗军基地的屏幕上循环播放，钢骨的系统更是日常被黑导致他被迫看他俩秀恩爱，所以银行警报是灰蝙蝠故意触发的。
 
 有趣的是，沙赞在笑话里的形象几乎都是被骗的（还是那次团建，沙赞被骗去用闪电烤蛋糕，但那个蛋糕的材料里混着奥姆的骨灰），看得出来ai对未成年人的爱。
+
 2. 紧急逃生演习
 
 警报响起时钢骨正在吃机油泡面："注意！瞭望塔即将坠毁！"
 
 他冲向逃生舱却发现：
+
 - 哈尔在给灯戒充电宝贴蝙蝠贴纸
 - 巴里用神速力摆爱心形泡面叉
 - 沙赞被哄骗用雷电烤棉花糖
@@ -3318,8 +3321,6 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 🦸🏻🦇❤️🚦⚡️🔥🧜🏻‍♂️🖥️🌩️⚖️🌩️🖥️🧜🏻‍♂️🔥⚡️🚦❤️🦇🦸🏻
 
-[^1]: 写到这突然有个迷思，就是海王那身黄绿配到底是他的皮肤还是他穿了一身材质比较奇特的衣服……我就一直没搞明白这个。其实制服这事说起来就感觉槽点挺多的，比如钢骨和火星猎人平时在理论上好像是不穿衣服的……
-
 在找蝙蝠制服参考的时候看了一眼帝国兴亡录（大超掉三德子去了）……不是，我寻思着，大超蝙蝠闪电女侠黑化都好理解，海王算半被胁迫的，火星猎人吧我就当他这个版本出身背景不同，但绿灯你瞎掺和啥呢？你那“魑魅魍魉无所遁藏”的誓言呢我请问？
 
 （以及考虑到dc超英诞生的时代背景，大超掉三德子去了的这个设想本身就挺地狱的（））
@@ -3636,7 +3637,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 怎么说呢，这个翻译就是有一种把霸王龙翻译成阳光彩虹小白马的美感……
 
-以及领主宣言是ds写的，尽管不太符合主题，但我很喜欢这版本宣言透露出来的那种强调绝对秩序的威权思想（尤其是【质疑即背叛，反抗即罪恶】【我们即法则，我们即未来】【跪下接受庇护，或挺立迎接毁灭】这三句），所以努力删改了一部分（这家伙除了这版本的神来之笔之外我至少用它以及其他各路ai改了四十多个版本，没一个像人话的）。顺便给你们看一下（抛开中二不谈的话其实非常帅的）ds的最初版本：
+以及领主宣言是ds写的，尽管不太符合主题，但我很喜欢这版本宣言透露出来的那种强调绝对秩序的威权思想（尤其是【质疑即背叛，反抗即罪恶】【我们即法则，我们即未来】【跪下接受庇护，或挺立迎接毁灭】这三句），所以努力删改了一部分（这家伙除了这版本的神来之笔之外我至少用它以及其他各路ai改了四十多个版本，没一个像人话的）。顺便给你们看一下（抛开中二不谈的话其实非常帅的，虽然还是太中二了）ds的最初版本：
 
 **《新纪元宣言》**
 
@@ -4008,7 +4009,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 蝙蝠侠注意到了她不小心说漏嘴的那个音节，但假装自己没注意到，不动声色的继续套话：“就只是因为这个？”
 
-“我觉得这个理由已经很充分了，只是更详细的我不能继续说了而已。”林雨桐终于喝完了那杯橙汁，“说实话，我现在还觉得跟做梦一样——在嘹望塔上喝着橙汁和蝙蝠侠聊天？哇塞。”
+“我觉得这个理由已经很充分了，只是更详细的我不能继续说了而已。”林雨桐终于喝完了那杯橙汁，“说实话，我现在还觉得跟做梦一样——在瞭望塔上喝着橙汁和蝙蝠侠聊天？哇塞。”
 
 她把杯子放回吧台，饶有兴致的看着一个小机器人飞过来收走杯子，并且试图戳一戳这个水晶圆盘样式的小家伙。小家伙灵活的闪开了，林雨桐乐了一下：“这是氪星科技？”
 
@@ -4148,7 +4149,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 尽管我们都知道影响肯定有，而且很大（不是所有的超英都能在外空长期生存的，以及他们的亲友可有不少普通地球人），但周明昭这话在外人听来是很有道理的，毕竟有超人和绿灯这么两个能在宇宙里到处乱跑的玩意儿在，很多人会下意识的以为正义联盟的每一个人都是无所不能的。
 
-于是大伙被说服了——其实也可以说是被吓服的。何况在此之前超人已经针对各国主权之类的敏感问题做出了相当符合国际惯例以及各国利益的说明（也就是各国只要按照计划建造护盾，正义领主就不会管其他的事情，你们爱打打爱闹闹跟领主都没关系），所以剩下的问题也就好办了。如此一来，这只先遣队的任务也就完成——啊这帮人就是过来探口风来了，现在看到正义联盟至少没真的完全疯其实还是让很多人放了新的。
+于是大伙被说服了——其实也可以说是被吓服的。何况在此之前超人已经针对各国主权之类的敏感问题做出了相当符合国际惯例以及各国利益的说明（也就是各国只要按照计划建造护盾，正义领主就不会管其他的事情，你们爱打打爱闹闹跟领主都没关系），所以剩下的问题也就好办了。如此一来，这只先遣队的任务也就完成——啊这帮人就是过来探口风来了，现在看到正义联盟至少没真的完全疯其实还是让很多人放了心的。
 
 之后女侠和绿灯带着其他人去参观一下瞭望塔，周明昭则留在了主会议室。没了其他不知情的人，超人也明显放松下来。
 
@@ -4168,7 +4169,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 拍完三人合影之后，林雨桐翻着手机相册感慨：“真好，我之前可没想到能真的和你们拍这个合影，啊superbat好磕，蝙蝠侠你的耳朵捏起来是软的嘛……所以真不是情侣装？”
 
-女大的思维跳跃度真是令人叹为观止，氪星人也包括在内。超人真的很好奇林雨桐和布鲁斯在此之前都谈了些什么以至于林雨桐的思维跳跃度能到这个程度，但中间确实有个问题是能回答的。
+女大的思维跳跃度真是令人叹为观止，氪星人当然也包括在内。超人真的很好奇林雨桐和布鲁斯在此之前都谈了些什么以至于林雨桐的思维跳跃度能到这个程度，但中间确实有个问题是能回答的。
 
 “是硬的。”超人随口道。
 
@@ -4180,7 +4181,7 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 超人可能自己都没反应过来自己到底说了句什么，倒是林雨桐愣了两秒之后突然高兴了起来：“我就说肯定是情侣装！”
 
-也不知道她是怎么知道的……
+也不知道她是怎么知道的。
 
 周明昭从这一堆乱七八糟缺乏前文的话题里也大概猜出来了林雨桐在说什么，犹豫了一下：“那……恭喜二位？”
 
@@ -4188,4 +4189,44 @@ ds给定名字的时候一开始引用错了——它说是出自《尚书》“
 
 蝙蝠侠在心里叹了口气，不知道为什么这件本来挺严肃的事的画风又一路往歪的方向狂奔了，只能把话题拉回来：“你们之前都谈了些什么？”
 
-“主要是资源。”超人说，“”
+“主要是资源。”超人说，“虽然过程比较曲折，不过我们达成了共识。”
+
+“考虑到超人先生前两天的发言，共识是迟早会被达成的。”周明昭说，“毕竟你连杀无赦都说出来了——不管你事实上会不会做这件事。”
+
+超人摇摇头。
+
+“我不杀人。”
+
+“那很好，”周明昭回答，“只是别把这个态度告诉其他人，你的威慑力对于这个计划的成败至关重要。”
+
+随后他又转向蝙蝠侠：“我们还有一些关于护盾的技术性问题。”
+
+蝙蝠侠点点头，示意周明昭问就行了。
+
+“能源问题你们打算怎么解决？”周明昭问，“我们算了一下，如果用电的话，把目前地球上全部的发电量都填进去也是杯水车薪。”
+
+“我们算出来的结果也是这样的。”蝙蝠侠点点头，“能源问题我们会想办法解决。”
+
+“有方案么？”
+
+“没有。”蝙蝠侠干脆的说。
+
+周明昭：“……”
+
+她被蝙蝠侠这么果决地回答给惊了一下，下意识的看了一眼林雨桐——林雨桐这会还在试图去戳另一个氪星机器人，察觉到了周明昭的目光，林雨桐也转过头来：“？”
+
+“没什么。”周明昭默默地扭回头去，再次看向蝙蝠侠，“所以你们也没什么办法？”
+
+“只是没有足够成体系的方案。”蝙蝠侠纠正了一下周明昭的说法，“但并不是没有办法。”
+
+周明昭再次看向林雨桐，林雨桐的目光更疑惑了。随后周明昭就意识到光靠眼神显然是不能让林雨桐反应过来了，迫于无奈只能开口直接问：“雨桐，你觉得呢？”
+
+“什么？”林雨桐没反应没过来。
+
+“能源。”
+
+林雨桐眨眨眼睛，似乎是不太理解怎么这个问题突然拐到她身上了，但还是寻思了一下：“魔法侧吧？~~DC的~~……魔法侧应该有很多能解决能源问题的方案，”
+
+她好像吞下去了一个词。蝙蝠侠注意到了那个可疑地停顿。
+
+[^1]: 写到这突然有个迷思，就是海王那身黄绿配到底是他的皮肤还是他穿了一身材质比较奇特的衣服……我就一直没搞明白这个。其实制服这事说起来就感觉槽点挺多的，比如钢骨和火星猎人平时在理论上好像是不穿衣服的……
