--- a/src/site/notes/02 小说/03 dc/02 进行中/【正联】迪克·格雷森的瞭望塔大冒险.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【正联】迪克·格雷森的瞭望塔大冒险.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正联】迪克·格雷森的瞭望塔大冒险/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【正联】迪克·格雷森的瞭望塔大冒险/","noteIcon":""}
 ---
 
 
@@ -52,6 +52,7 @@
 迪克没搭理他，迈步走向离开传送大厅的入口通道。耳边传来的广播声越发欢快了：“欢迎，访客，请跟随箭头指引进行参观……”
 
 迪克忽然停下了脚步。他看到门框上贴着一张便利贴。等到再靠近些之后，他看到了上面的内容。
+
 > 1. 相信光。（浅蓝色。）
 > 2. 远离光。（黑色）
 > 3. 相信。（金色）
@@ -163,17 +164,18 @@
 “那至少把视觉共享打开……”
 
 “拒绝。”迪克说，随后不顾兄弟姐妹们的劝阻靠近了那扇门。不过他没有直接推门进去，而是先看向了贴在门口的那张浅蓝色便利贴，便利贴的边缘有被水洇湿的痕迹。字迹主要是深蓝色的，但是被修改过。
-> 1. 瞭望塔没有水族馆。（黑色笔迹）
-> 2. 如果你看到了水族馆，~~不要~~进入。（黑色笔迹，但是被深蓝色笔迹修改过）
-> 3. 水族馆内的热带鱼是友善的，~~你可以和他们说话。~~但不要和鱼说话，人类不会和鱼说话。（黑色笔迹修改）
-> 4. 水族馆内没有蝠鲼，如果你看到了蝠鲼，请忽视，尤其是黑色的。
-> 5. ~~蝙蝠不是水生动物，如果你在水族馆里看到了蝙蝠也请无视。~~（黑色笔迹修改）
-> 6. 中央展台上的三叉戟是私人物品，请勿触碰。
-> 7. ~~水族馆里有核潜艇，如果你没看到，请四处寻找一下。有些时候核潜艇可能不在水族箱里，如果你找不到，去海底找。~~水族馆里没有核潜艇，不要去海底，人类不能在海底生存。（黑色笔迹修改）
-> 8. 游览时请跟随~~蓝色绿色蓝色~~绿色箭头。（被黑色和深蓝色的笔迹反复修改好几次）
-> 9. 在水族馆内拍照请不要开闪光灯。
-> 10. ~~在9:00-17:00期间，水族馆不对外开放。~~（黑色笔迹，被深蓝色笔迹划掉了）
-> 11. 玩得开心！:-D（稚嫩的笔迹）
+
+> 8. 瞭望塔没有水族馆。（黑色笔迹）
+> 9. 如果你看到了水族馆，~~不要~~进入。（黑色笔迹，但是被深蓝色笔迹修改过）
+> 10. 水族馆内的热带鱼是友善的，~~你可以和他们说话。~~但不要和鱼说话，人类不会和鱼说话。（黑色笔迹修改）
+> 11. 水族馆内没有蝠鲼，如果你看到了蝠鲼，请忽视，尤其是黑色的。
+> 12. ~~蝙蝠不是水生动物，如果你在水族馆里看到了蝙蝠也请无视。~~（黑色笔迹修改）
+> 13. 中央展台上的三叉戟是私人物品，请勿触碰。
+> 14. ~~水族馆里有核潜艇，如果你没看到，请四处寻找一下。有些时候核潜艇可能不在水族箱里，如果你找不到，去海底找。~~水族馆里没有核潜艇，不要去海底，人类不能在海底生存。（黑色笔迹修改）
+> 15. 游览时请跟随~~蓝色绿色蓝色~~绿色箭头。（被黑色和深蓝色的笔迹反复修改好几次）
+> 16. 在水族馆内拍照请不要开闪光灯。
+> 17. ~~在9:00-17:00期间，水族馆不对外开放。~~（黑色笔迹，被深蓝色笔迹划掉了）
+> 18. 玩得开心！:-D（稚嫩的笔迹）
 
 迪克：“……”
 
@@ -245,9 +247,8 @@
 
 在再一次拒绝撤退、打开视觉共享或者让家里其他人来支援的请求的时候，迪克正站在一条有无数拐角的长廊入口。廊壁上不断有人形的轮廓凸出又消失，似乎是想要冲出墙壁又不断的为什么力量被拽回去。迪克无视了那些人形轮廓，视线落到了长廊入口处的一张浅红色便利贴上，字迹是红色的……基本上是红色的。
 
-█
-
 ……至少理论上来说应该是红色的。
+
 > 1. 不要靠近这条走廊，沿着你来时的路返回，遵循绿色箭头的指引。（黑色笔迹）
 > 2. 请遵守交通规则，靠右行走。
 > 3. 如果你来自靠左行驶的国家，也请靠右行走，不要走在左边，谢谢配合(ﾉ∇︎〃 )。
@@ -567,6 +568,7 @@
 他顿了顿：“……一张蓝色的便利贴？”
 
 那是一张很大的便利贴，标准的a4纸，用双面胶粘在了墙上。事实上，蝙蝠家族在看到它的时候就认出来了那是一张浅蓝色的便利贴，上面有着温和的浅蓝色字迹，三人看着觉得颇为眼熟，但仪器分析显示不匹配任何已知样本——和之前一样。
+
 > 亲爱的访客，
 > 欢迎来到瞭望塔！为了您的健康和安全，在浅蓝色区域内请遵守以下规则：
 > 1. 您是人类。人类是一种在地球上自然进化而来，懂得使用语言，具有多种复杂的互助性社会组织，喜欢发展复杂的科技的物种。
@@ -589,6 +591,7 @@
 “这应该是超人写的。”提姆道，“我能认出他的笔迹来，虽然仪器显示笔迹不匹配。考虑到克拉克是个记者还是个得过普利策奖的记者，会不会是因为布鲁斯很放心他……”
 
 提姆话说到一半就住了嘴，另外两人的动作也一下子停了下来，因为他们都看到那张浅蓝色的便利贴上开始缓缓浮现出新的字迹，字母蹦跳着调整自己的位置，为新来的同伴留下空间：
+
 > ~~亲爱的访客，~~
 > ~~欢迎来到瞭望塔！~~瞭望塔不开放参观，如果你是误入，立刻离开。（黑色笔迹划去后补充）
 > 为了您的健康和安全，在浅蓝色区域内请遵守以下规则：
@@ -675,104 +678,823 @@
 
 哦对，三岁以下幼童禁止食用，因为容易噎着。
 
-## 备注
+## Chapter 4
 
-### 正义联盟的真相
+瞭望塔上第三条通道前也贴着一张便利贴，一张金色的便利贴（正常大小），上面是金色的字迹，搭配着一条金色的通道。
 
-联盟成员其实是一群很喜欢人类的外神，超人是一颗处于稳定主序星阶段的恒星，蝙蝠侠是一个源自人类集体恐惧潜意识的概念性阴影聚合体，神奇女侠是“真实”概念的现实化具现，绿灯是一个高强度的意志能量生命体，即灯团能量本身，闪电侠是神速力的物理化身，海王是水体的集体意识与物理化身，火星猎人是一个自洽且具有高度传染性的思维模式/信息（模因），然后瞭望塔是他们平时居住的巢穴。这七个实体是很喜欢人类的，平时也以人类的身份和人类生活在一起，甚至和人类有了子嗣。
+便利贴上只有一句话：“真实笼罩之下，谎言无所遁藏。”
 
-迪克是超人和蝙蝠侠早期力量失控的一个产物，在外神的伦理观念里就相当于迪克是超人和蝙蝠侠的孩子；而达米安康纳小乔这种外神和地球人的混血被外神视作自己力量的延伸，这种人并不是外神，只是拥有特殊能力的地球人，所以迪克不会把达米安视作弟弟。
+“这肯定是戴安娜留的。”提姆道。
 
-然后其他没有血缘关系，但是力量同源的人，比如说闪电家族或者灯团成员是因为这些外神向他们分享的力量，他们本质上还是人类。
+“说实话，这条通道看起来挺正常的。”斯蒂芬妮说，“我们从这里走？”
 
-蝙蝠家族就基本上全都是纯粹的人类了，蝙蝠侠很喜欢捡小孩的。
+“最好别。”提姆摇摇头。
 
-然后阿尔弗雷德、亚特兰蒂斯和天堂岛这三个存在实际上是蝙蝠侠海王和神奇女侠力量的衍生造物，他们并不是独立个体。
+杰森赞同：“规则越简单越有可能隐藏陷阱，相比之下其实不如走第一条。剩下几条是什么？”
 
-### 关于英雄们在干嘛
+左起第五条通道的门口贴着迪克之前看到的那张红色的便利贴，他们已经看到了便利贴上的内容，而他们现在看到了那条走廊里的景象。
 
-布鲁斯为了把狂笑之蝠赶出这个宇宙中了狂笑的升级版小丑毒气，超人和女侠在帮他压制症状，这仨人的能量暴走导致了瞭望塔活化；巴里和荣恩负责保护与正义联盟相关联的人防止他们被外神们的力量不稳定一不小心弄死顺便压制地球上对于“正义联盟去哪里了”这个问题的探寻倾向，哈尔负责阻拦前来调查真相的人（如果真的有的话），亚瑟比较清闲就负责帮着带孩子（瞭望塔）。
+那是一条有无数拐角的长廊，延伸到无尽远处，廊壁上不断有人形的轮廓凸出又消失，似乎是想要冲出墙壁又不断的为什么力量被拽回去。隐隐约约有近似风声又像是求救声的声音从墙壁的方向传来，配合上那些如同蠕动浮雕一般的人形，这就让门口便利贴上强调了三遍的“行走时尽量靠近墙壁”显得很没有说服力。
 
-然后因为瞭望塔上大伙实在是太手忙脚乱了所以荣恩一不小心连迪克也瞒过去了（本来正联计划是让迪克来帮忙的），直到孤独堡垒活化（孤堡是超人力量的延伸，这代表超人力量失控）迪克才反应过来正义联盟出事了赶紧去帮忙，本来他想自己去的奈何蝙蝠家族的成员们完全不答应，这也就是为什么杰森会觉得迪克的精神状态有问题，毕竟他们不知情吗。
+三人：“……”
 
-### 第三章原本的内容
+“我好像听到有人在喊我的名字。”杰森叹了口气。
 
-迪克穿过了那条有着无数个转角的长廊，随后一脚踏入了恒星的火海之中，在被那庞大的引力撕碎之前，他还在跟肩膀上的那只金红色的泰迪熊吐槽：“你下次让布鲁斯布置赛道的时候能别搞那么长吗？不能？不能的话至少给条捷径吧累都累死了……我知道时间不流动，时间不流动也累啊。”
+提姆也跟着叹了口气：“这条再右边就是水族馆，肯定是不能去的，毕竟瞭望塔上哪来的水族馆……”
 
-神速力没有回答，神速力只是啃了他一口。
+“最右边的两条呢？”斯蒂芬妮提议道。
 
-迪克：“嗷。”
+“右起第二条门口没贴任何便利贴，至于最右边那条……最好别走。”
 
-“迪克？”温和而令人安心的声音传入迪克耳中，“你怎么来了？”
+斯蒂芬妮凑过去看了一眼——这条通道看起来最像瞭望塔正常的内部通道，门口的白色便利贴上用稚嫩的笔迹写着他们之前从迪克那里听到的欢迎词：
 
-在光下，阴影活跃起来。
+“亲爱的游客，欢迎来到瞭望塔！这里是全球规模最大、科技水平最高的同步轨道空间站，也是正义联盟的总部。您可以在这里与英雄们进行面对面的交谈、享用瞭望塔食堂提供的美食、参观英雄们的训练设施、与英雄们进行合影或握手等一系列活动……”
 
-“孤独堡垒都站起来了我能不来吗。”迪克说，走向恒星燃烧的内核，“b情况如何？”
+“话又说回来。”斯蒂芬妮忽然道，“虽然我们从迪克那里听到了欢迎词，但我们自己来了之后那个广播就不见了。”
 
-“不是很好。”真相传来，“他快要忘掉自己的真实了。”
+“瞭望塔上本来就没这个广播吧？”杰森吐了句槽。
 
-“而且他的力量比较特殊，我们都很难帮上忙。”恒星温和地补充。
+“嗯……说的也是。”斯蒂芬妮点点头，“所以我们现在只剩下最后一条路了？”
 
-“所以我过来了。”迪克回答，阴影开始蠕动，“嘿，b，我来了，再坚持一下。”
+“或许我们从一开始就只有一条路。”杰森摇摇头，视线投向了左起第四条的通道。
 
-于是阴影走向阴影，阴影融入阴影。
+……
 
-“我在想一件事，”克拉克漂浮在宇宙中，若有所思的看着阴影开始扭曲、聚合，看向身旁散发着金光的套索，“你说亚瑟是不是应该……呃，戴安娜，你没事吧？”
+芭芭拉现在的心情确实很难说明白。好消息是她在通过三人的视觉共享看到了瞭望塔上的情况之后意识到了很多事情，坏消息是她甚至不能把这些“意识到”告诉瞭望塔上的三个人。不是她不想，而是她突然发现她这边的通讯被切断了。
 
-套索摆摆尾巴：“没什么大事，就是有点累，亚瑟应该怎么样？”
+从瞭望塔那边切断的，权限记录来自超人，所以芭芭拉只能尝试自己解决这件事情。
 
-“造个子嗣之类的以防万一？”
+三人的精神状态显然存在问题，但这种问题并不来自他们自身，而是某种外部力量的影响。而这个外部力量明显是没有恶意的，否则以他们三个现在的精神状态，他们可能已经死在那里了。
 
-“……你这么一说好像是，”戴安娜寻思了一下，“但是他的力量形式也比较特殊，和谁造呢？”
+“瞭望塔左起第五条通道的右边那条通道是右起第四条通道。”芭芭拉嘀咕了一句，“水族馆在右起第三条……”
 
-克拉克：“……或许我们未来还能找到其他同类？”
+有一条通道被瞭望塔上的三人忽略了，但在芭芭拉的视野里却很清晰。除此之外，关于瞭望塔上的广播，芭芭拉也有自己的想法。
 
-“希望如此。”天堂岛的公主矜持的点点头，“说起这个来，你难道不觉得荣恩才是最麻烦的那个吗？”
+或许一开始我们听到的并不是广播，甚至从一开始就没有广播，只是迪克看到了那张纸条上的内容，然后他们就听到了瞭望塔的广播，就像他们之前“看到的”规则内容并不是实际上“看到的”一样。
 
-“我平时都找不到他在哪里……”
+芭芭拉是这么想的。
 
-泰迪熊三两下顺着超人的披风爬上他的肩膀，随后坐在恒星的日珥上和他一起观察阴影逐渐吞噬星光的过程。
+但那是什么呢——一个活化的瞭望塔在对迪克说话？不是没有可能，这个猜测相比较其他的猜测来说甚至显得没那么惊悚。
 
-“哦，巴里，”克拉克很愉快的打着招呼，“哈尔呢？”
+至于说瞭望塔上三人明显有问题的认知状态，芭芭拉已经大概猜出来到底是谁做的了。
 
-泰迪熊手舞足蹈的比划了起来，差点从超人肩膀上掉下去，好在超人及时接住了小小的泰迪熊。
+其实不难猜测，正义联盟内有类似能力的人只有一个——火星猎人。
 
-“……啊？”超人惊讶道，“……他和荣恩在阻拦蝙蝠家族？”
+只是他为什么要这么做？如果没有恶意的话，是因为保护？
 
-戴安娜：“……”
+芭芭拉断定荣恩此举出于善意不是没有原因的，因为就目前的情况来看，超人、绿灯、蝙蝠侠甚至迪克其实都在保护他们（虽然形式上颇为诡异），而闪电侠和海王——如果那两张便利贴真的来自这两位的话——也并不像是有恶意的存在。基于此，火星猎人没道理是个例外。
 
-公主犹豫片刻：“……我们是不是应该去帮个忙？”
+但……为什么呢？
 
-有一滴水出现在了两人面前。
+……
 
-“比起去帮忙阻拦蝙蝠家族不如赶紧过来带孩子啊！”海王的声音听起来有点抓狂，“这丫头太能闹腾了！”
+芭芭拉的思绪并没有持续特别久的时间，主要是有一条来自泰坦的通讯打断打断了她的思考。
 
-背景音里传来幼童的尖叫声和咯咯笑的声音，随后是水花飞溅的声音。
+“怎么了？”芭芭拉迅速进入状态，问道。
 
-克拉克、戴安娜：“……”
+“我们发现了一个邪教。”星火说，脸色却显得有点古怪，“需要你帮忙找找线索。”
 
-“说起来这个来，我们好像还没仔细看过瞭望塔的能力，”克拉克眨眨眼睛，“以及，给她取个什么名字呢？”
+“好，什么邪教？”
 
-“卡珊德拉·该隐。”女侠毫不犹豫的脱口而出。
+“他们自称‘真实太阳教’，教义是觉得现在咱们头顶上那个太阳是个假的，掩盖了真正的太阳的光辉，而他们这个教就是要让真正的太阳把假太阳给吞噬掉之类的……这块具体没听懂，那个鞋教徒挺疯的，反正就这个意思。”星火越说表情越怪，“我们还缴获了一本‘圣经’。”
 
-克拉克：“？”
+“太阳是假的？”芭芭拉嘴角一抽，一边查找资料一边随口问了一句，“那他们那所谓‘真实的太阳’是个啥玩意儿？”
 
-克拉克犹豫了几秒，确实也没找到合适的理由反驳这个名字，只能点点头：“好吧，那就叫这个。不过讲真你取这个名字，是打算扔给布鲁斯养？”
+星火：“是超人。”
 
-“除了布鲁斯之外还有谁最适合‘失踪一个月回来之后突然又多了个女儿’的人设？”
+芭芭拉：“噗——咳咳咳咳咳咳咳……”
 
-“emmmm你说得对……”
+芭芭拉差点被自己的口水给呛死。
 
-“我必须得说，”亚瑟的声音再次传来，“卡珊比迪克闹腾多了。”
+“你也觉得很荒谬对吧。”星火耸耸肩，对于芭芭拉的这个反应并不意外，“虽然我得承认超人确实挺像个太阳的，但他毕竟不是一颗真的恒星，这帮邪教徒的脑子到底是咋长的……哦对，‘圣经’也一块发给你了。”
 
-“毕竟她比迪克还要多了一份戴安娜的力量。”克拉克对于这个倒是没什么意外的，“我马上过去。戴安娜，你和巴里留在这照看布鲁斯？”
+芭芭拉好不容易喘匀了气，摆摆手挂了通讯。
 
-“没问题。”戴安娜点点头，从克拉克的肩膀上接过泰迪熊，“对了，巴里，其他人都安全吗？”
+她可没敢告诉星火她差点被呛死不是因为邪教徒那脖子上顶了个环地脑洞程度，而是因为她突然意识到这帮邪教徒说的极有可能是真的。
 
-泰迪熊点点头：“在沃利超过我之前都没什么大问题。”
+如果说超人是一颗恒星……
 
-戴安娜：“……比起这个，你要不要先解释一下为什么获得你力量的人类速度能超过你？”
+芭芭拉把自动搜索的脚本挂在一边，打开了星火发来的pdf文件。邪教徒的“圣经”上充满了各种各样的癫狂又扭曲的言论，大部分内容是毫无意义的口号式的重复，诸如“伪日必将坠落”之类的疯癫言论让人看的头疼，但芭芭拉还是从那上面看到了一些有用的信息。
 
-泰迪熊寻思了一下：“……因为我只是个神速力？”
+……她也不知道有没有用，但至少是信息。
 
-戴安娜：“……”
+“礼敬！礼敬！礼敬至高之父！那燃烧希望、播撒光明、于物质界凝形为光之星核的辉日之神！祂是存在之锚！祂是纯净之光！祂的光辉统摄万物真实之序！
+
+“那冒牌的火球高悬穹顶，用虚假的光热蛊惑众生。牠窃取真日之名号，然其内核空洞如蛆虫蛀蚀的腐果！它用虚假的光热蛊惑众生，却不知真正的至阳早已降临尘世——祂名「卡尔-艾尔」，是燃烧的真理，是撕裂虚妄的烈焰之矛。
+
+“赞美沉默之日！祂的光辉本应焚烧群星，却因慈悲而忍受阴影的亵渎！看啊，祂的轨道上缠绕着谎言的荆棘，祂的核心被注入污秽的恐惧！何等神圣的受难！
+
+“混沌滋生毒瘤，阴影窃据王座，有黑暗中的匍匐者妒忌真日的光辉，自无尽黑暗的恐惧中爬出。
+
+“牠以恐惧为毒涎，织就弥天大网欲玷污圣焰，更诞下非昼非夜之子，污秽的孽种，妄图用阴影之血玷污恒星圣洁——
+
+“此乃影之秽种，污染光明的毒瘤，伪经称其为「长子」，实乃亵渎。
+
+“有雌兽剜取圣焰铸其枷锁，谎称「真实」；有绿虫吮吸光芒结茧自缚，狂言「意志」；更有金鼠盗取神速之髓，污秽真日「神速」权柄；
+
+“那污绿色的疫病最为阴毒！它化形为友，将思虑之虫植入真日颅内；牠散播认知的霉斑，诱使凡人质疑真日形貌。此獠最毒——竟想将恒星拖入血肉泥潭！看呐！圣焰因此蒙尘，竟与阴影共舞！此乃万罪之源！
+
+“深海涌起恶意的波涛！深海中的伪王高举三叉戟咆哮：「吾将熄此烈日！」那持戟的狂徒驭使着咸腥的军团，驱策污浊之水妄图淹没真日永恒燃烧的荣光——却不知真日灼热，万千海洋亦将焚于吾主一息……”
+
+芭芭拉：“……”
+
+她揉着自己的额角，意识到泰坦们把这东西扔给自己的原始动机估计不是“这玩意儿可以帮你更好的查找信息”而是“这么颠的玩意儿不能只有我们受罪”，总之抛开事实不谈这事还挺抛开事实不谈的，话又说回来的话话就又说回来了，这事主打的就是一个主打，不提这些邪教徒需要进精神病院的话那他们确实不需要进精神病院。芭芭拉有生以来第一次感觉到小丑是一个如此善良的生物，至少小丑只是个罪犯不会一边嚷嚷着什么“伪日必将坠落”一边给人造成精神污染——超人知道这帮人的“圣经”这么癫吗？
+
+不过抛开精神污染不谈，圣经上透露出来的信息信息量还挺大的——芭芭拉大概整理了一下。其实大部分内容和现在大伙对他们的了解没什么区别，海王、神奇女侠、绿灯侠和闪电侠的能力和特征都对上了（关系显然是一个都对不上的），火星猎人是“疫病”，看起来似乎是有什么思维操控之类的能力，这一点和芭芭拉之前的推测也能对上号，超人是个太阳是个默认前提，总的来说区别比较大的有两点。
+
+第一是蝙蝠侠——这帮邪教徒似乎觉得蝙蝠侠好像不是普通人类，毕竟一个正常人类应该是做不到“玷污太阳”的，但也可能只是邪教徒在发疯。不过考虑到超人都是颗太阳了，蝙蝠侠不是普通人类也挺合理的。
+
+第二是迪克——这是和现有冲突最大的部分。
+
+其实芭芭拉也不太确定那个“长子”到底是什么玩意儿，她甚至也不太确定“伪经”指的是哪本书（这帮邪教徒虚空索敌索到哪里去了.jpg），但毕竟迪克之前的表现太过奇怪，再加上阴影那段怎么看怎么像蝙蝠侠（至少不会是露易丝或者卢瑟），所以显然这个“长子”不会是康纳或者小乔，那迪克确实是最有可能的……
+
+……等一下？
+
+芭芭拉似乎突然意识到了什么问题，重新确认了一下“圣经”的文本。
+
+“牠以恐惧为毒涎，织就弥天大网欲玷污圣焰，更诞下非昼非夜之子，污秽的孽种。”
+
+去掉定状补只留主谓宾。
+
+“牠织网/诞下孽种。”
+
+芭芭拉：“……”
+
+芭芭拉大受震撼！
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+写这个邪教的时候差点被我自己给笑死。
+
+其实灵感来源于眼珠子的深海余烬和dc官方的某个从崇拜超人的邪教徒手下救人剧情的结合。虽然深海里面的太阳邪教徒还挺麻烦的，但把太阳的部分转移到大超身上之后这件事果然就只剩下好笑了。顺带一提大超知道他们的存在，早期正义联盟还联手剿灭过一次这帮人，然后这帮人就消停了不少，现在是因为孤独堡垒站起来了所以这帮人又开始活跃了。
+
+## Chapter 5
+
+在这一章开始之前我必须要跟你们说一下，就是我本来是想写正义联盟的规则怪谈的，但是写着写着想到了一个更好玩的东西……
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+蝙蝠侠，一个心理性别为男性且生理性别也为男性——就算心理性别不一定是男性，生理性别绝对是男性——的地球人类，生了个孩子。
+
+尽管知道这可能是邪教徒的胡言乱语，但考虑到这本书在某些方面微妙的准确性，芭芭拉还是不得不把这种可能性纳入考量。
+
+如果此事为真，唯一的解释就是“蝙蝠侠不是人类”。这也就随之证明了另一个问题，就是迪克·格雷森的身份也是伪造的，他根本不是什么飞翔的格雷森家族的遗孤，而是蝙蝠侠和超人的子嗣。
+
+三个人都不是人这件事这很大程度上解释了迪克的古怪行为，那既然布鲁斯都不是人类了孩子具体是怎么生的也就有很多种可能性了，这倒是也解释了为什么超人看起来对迪克视如己出，因为确实是己出，都不用视如的部分来着……
+
+芭芭拉：“……”
+
+等一下，好像有哪儿不对。
+
+——如果说超人和蝙蝠侠在很早的时候就因为一些原因诞生了一个子嗣……那露易丝是怎么回事啊？！她现在还跟克拉克是已婚状态吧？！小乔又是从哪里来的啊？！
+
+硬要说的话，布鲁斯和哈尔能整出这种活就算了（虽然他俩本质上也干不太出来这种事，但毕竟人设有这种可能），超人不像是能干出这种事的人啊？！
+
+芭芭拉再次大受震撼。
+
+当然了，毕竟这件事现在的各个当事人除了露易丝之外没有一个人还在地球上，不是失踪就是失踪的，所以纠结这些好像也没什么意义。
+
+说起露易丝来，包括露易丝在内的超英家属们对于各自丈夫/女友的失踪反而很淡定。除了义警失联这事很常见之外，另外一个原因是他们在临走之前是说了自己有事要做可能需要很长时间才能回来的，所以他们其实都挺冷静的。史蒂夫倒是问过几次正义联盟的下落，但那不是出于对女侠的私人感情，而是出于工作需要，所以现在干着急的其实也就只剩下了同为义警的其他英雄们。
+
+自动搜索脚本运行完成，芭芭拉查看了一下被筛选出来的搜索结果。结果相当丰富，显然崇拜超人的邪教不止这一个——这一点芭芭拉也是知道的，毕竟英雄们每年都会花不少精力在剿灭邪教（以及拯救被各类邪教绑架的家属）上。但“真实太阳教”的教义还是过于出类拔萃了——把超人当做太阳崇拜的邪教很多，但说太阳是伪日的还是就此一家。
+
+筛选出和真实太阳教相关的信息之后，芭芭拉发现了一个问题——这个教派曾经非常活跃，这个曾经是一个相当久远的过去，那时超人刚开始活跃，正义联盟尚未成立。而在正义联盟成立之后，这个教派也就迅速地沉寂了下去，原因应该是联盟成立之后的一次针对邪教的大规模清剿。从那之后真实太阳教就一直没什么动静了，直到最近才又活跃起来。
+
+嗯，怎么说呢，毕竟一露头就被秒，有超人的时候他们当然不敢活跃。而除了超人失踪之外，孤独堡垒站起来了显然也是他们活跃起来的一大因素，真实太阳教将这视为一种“真日即将吞噬伪日”的象征，也不知道这两件事之间到底有什么关系，但毕竟邪教徒是一种不能以常理论之的生物，芭芭拉也懒得去思考这帮人的思路到底是怎么跳到这个部分来的。
+
+但话又说回来了，一个崇拜超人的教派，自称正统，却又不敢在超人公开露面的时候活跃，这事也挺讽刺的——一个真正的密教团体就是要有那种把圣经给正主看的勇气才对啊。
+
+芭芭拉想。
+
+……
+
+詹姆斯·戈登的手在颤抖。
+
+说实话，作为一个在哥谭生活了几十年的人，而且还是警察这个特殊职业，戈登这半辈子里见到的各路牛鬼蛇神数不胜数，履历丰富的简直可以让绝大多数同行望洋兴叹。他自认为自己已经可以冷静的应对几乎所有的事情了，不管发生什么都不会让他有过大的情绪波动。
+
+除了这件事。
+
+“说实话，埃利亚斯，我觉得你真的没必要更新的这么勤快，”戈登说，颤抖着点燃了手里的烟，“相信我，蝙蝠侠也是这么想的。”
+
+儒雅的商人神色一肃，认真道：“记录主的行事是我等信徒的职责。”
+
+戈登脸上露出了有点绝望的神色：“……你有没有考虑过你的主对此事的看法？”
+
+“主已对我降下谕令，让我继续编纂。”埃利亚斯如是说。
+
+“他明明是……”戈登深吸一口气，“好吧，就算你真的在继续更新这本‘圣经’，在蝙蝠侠现在人不在哥谭的情况下，你是不是也没必要把这本‘圣经’给我看？”
+
+但埃利亚斯的理由也非常无懈可击。
+
+“您乃是主的先知，当然要先审阅圣经内容，我才好发给教团同胞。”
+
+戈登：“……”
+
+他甚至有点绝望的接过那本明显是刚被印刷出来的“圣经”，封面上“影之书（Liber Umbrarum）”的标题还是一如既往的华丽又厚重。这本书戈登已经看了很多次（毕竟埃利亚斯每次更新版本都会给他寄一份），但每次看到的时候还是会有一种绷不住的感觉。
+
+> 1. 太初有道，道是恐惧，道是阴影。阴影运行在罪恶的水面上，渊面黑暗。
+> 2. 却说那夜，巷中有义人流血。
+> 3. 阴影见那孩童年仅八岁，心中恐惧至纯至烈，乃大喜悦，遂俯身而下，与之合一。
+> 4. （新增）阴影说：“你不可死，你当为我的器皿，你的恐惧将化为利剑，你的悲伤将铸为坚盾。”
+> 5. 于是，阴影披戴人形，从血与珍珠中起身。那第一个见证此事的人，虽战兢却不能移开目光，因其心中有公义的灵运行，他便成了先见。
+> 6. 这便是暗影之主，沉默之父，吾等慈悲的守护者降临世间的第一日。
+
+有一说一戈登当场就想把书扔了，但埃利亚斯期待的表情还是阻止了可怜的局长真的把书从窗户扔出去。
+
+“首先，”戈登说，“蝙蝠侠没说这个。”
+
+埃利亚斯眼睛一亮：“那主说了什么？”
+
+他其实什么也没说，只是静默地伫立。孩子的尸体溶解在粘稠如同沥青的黑暗里，取而代之的是一个具有了人性的恐惧。他在日后的很多年里成为了哥谭最特殊的、也是标志性的存在，只是作为亲眼见证了那一切的人，戈登觉得，这个阴影的存在本身就是哥谭诅咒的具象化。
+
+但布鲁斯·韦恩和蝙蝠侠的存在却又成为了那诅咒终会消退的证明。
+
+“他什么也没说。”戈登说，“不过你就这么写吧，他现在肯定会说这些了。”
+
+于是埃利亚斯高兴地在《圣言录》（一个用来记述他的主、先知、智者、圣女、圣子之类的存在对他发表的意见的笔记本）上记下了这一点。
+
+> 14. 父自暗影中诞生，携无边威能与寂静之慈悲。祂行走于哥谭的屋顶与罪孽之上，其形如涌动之黑暗，其目如炼狱之炬。
+> 15. 有愚妄者，名曰罪犯，欲以凡铁与恶念伤害我父。父乃展露祂的一丝真容，彼等便心智崩解，口中呼喊无意义之词，溺毙于自身之恐惧。此乃父之惩戒，亦为父之怜悯，因其未取彼等性命，仅取彼等理智。
+> 16. 父并非独行。祂于尘世择选义人，为其耳目与臂膀。有义人戈登，乃第一见证者，心似坚钢，目能视真，父赐他警徽为记，守望黑夜。
+> 17. （新增）那先见之女，纯洁、聪慧且无畏。她行走于光暗之间，传达讯息，匡扶正义，实为暗影圣座前的明灯。
+> 18. （新增）她虽不自知，然其行止已深合父之心意。故我等尊她为圣女，愿她的网线永不断绝，她的信念永放光芒。
+> 19. 有智者福克斯，通达万物之理，能解父之奥秘，为父铸造尘世之甲胄与器物。父赐他智慧，使其成为阴影中的基石。
+> 20. 更有圣者阿尔弗雷德，父以自身影素与逝者之忆塑其形，赐其不朽之魂与慈爱之心。圣者常伴父之左右，以红茶与谏言滋养父之人性，是为父与尘世最坚韧之锚。
+> 21. 父是如此深爱此城，乃至其阴影所覆之处，罪恶退散，癫狂亦得片刻安宁。此非因恐惧，乃因父之存在本身，即为一种宏大而沉默的爱。
+> 22. 颂曰：暗影之父，寂静之主。汝之怒，乃罪人之终焉；汝之爱，乃哥谭之基石。我等愿行走于汝之影下，直至时间尽头。
+
+戈登：“……”
+
+“删掉。”戈登说。
+
+埃利亚斯拒绝执行：“这两条是教会同胞们强烈要求增加的。芭芭拉·戈登小姐已经是教内公认的圣女，增加这两条只是顺应教内同胞的意愿，加与不加戈登小姐的地位都不会改变。”
+
+戈登长叹一声：“你知道如果让她知道我作为 gcpd 的局长却私底下跟一个密教团体来往密切，她会怎么说我吗？”
+
+“我猜戈登小姐会和您吵一架？”
+
+“差不多，她会把我骂一顿。”
+
+“那就更不能删了。”密教首领如是说，看起来很愉快，“请放心，教内同胞都是可信之人，戈登小姐和其他人都不会知道这本书的存在的。”
+
+戈登：“……”
+
+他接下来飞快的跳过了关于超人与蝙蝠侠初见以及埃利亚斯在事实基础上进行的艺术化加工，主要是这部分实在是太艺术化了，哪怕不是当事人，只要是对两人关系稍有了解的人，每次看到都会尬到抠出精装修的三室一厅来，当事人就更别说了，当年蝙蝠侠看完这一段之后低气压了一整周，超人则一个月没来哥谭一直在跟路易斯腻歪，但埃利亚斯还是无知无觉非常乐观的更新了圣经的版本，并且这一段艺术化加工确实在这个密教团体里掀起了一场风暴，大伙都表示教主写得好，结尾“颂曰：哦，神圣的二元性！至暗与至光之结合！此乃亘古未有的奇迹，我等有幸得见，实乃恩典！”写出了多少教徒的心声……
+
+> 23. 暗影与太阳的结合，岂能没有果实？
+> 24. 于是，**长子**诞生了。他是明亮的阴影，是温暖的午夜。他是父与日星力量与爱的具现，是非凡的悖论，是美丽的奇迹。
+> 25. （新增）见此子，天地万物皆要询问：“此为何物？”然，探寻其本质乃亵渎之举，凡心智必被其神圣悖论所焚毁。我等只需颂赞：此乃父与日星之爱证，是我等主神圣家族之开端！
+
+戈登：“……”
+
+他放下了书——彻底看不下去了。
+
+“埃利亚斯·布莱克先生，”戈登局长语气沉重，“首先，你应该知道超人结婚了吧？”
+
+埃利亚斯一点没觉得有什么问题：“主与日星的关系哪里能用世俗爱情来衡量？”
+
+戈登：“……”
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+生草的蝙蝠圣经（确信）。
+
+以及这下谁是伪经很明显了吧（乐）一个真正的密教团体就是要有把自己写的圣经亲手送给自家神审阅的气才行啊！（大声）
+
+神暂时没空的话送给神侧审阅也可以。
+
+（戈登：没有人在意我的死活吗.jpg）
+
+顺带一提超露确实是纯爱，超蝙关系很好但确实不是那种关系，埃利亚斯作为一个写同人的……不是，作为一个写圣经的对他俩的关系有一定的艺术加工。
+
+## Chapter 6
+
+瞭望塔上的三人最终选择了左起第四条通道。这条绿色通道的主人显而易见的是绿灯侠，门口的规则也写的简明扼要且看起来没什么诡异的地方，概括一下无非就是跟着绿光行动遇到别的颜色的光记得躲。
+
+但规则写的简明扼要的结果就是三人在走了一圈之后发现他们居然又回到了原地——顺带一提他们也没遇到别的颜色的光。
+
+“看起来‘绿光’的目的就是要赶走我们了，从这一方面来说的话老头应该也是一个想法，毕竟他在水族馆的规则上强调了绿光吗。”杰森说，“所以我们如果按照黑色笔迹行动，最终导向的结果应该也是安全离开？”
+
+“那就反向证明了我们不能按照黑色笔迹行动。”提姆点点头，随后视线又落到了第一条通道旁边的浅蓝色便利贴上，字母在他的视野里欢快的舞蹈着，“但问题是，如果我们不按照黑色笔记行动的话，问题可能就不在‘离开’而在‘安全’上了。”
+
+“如果前七条通道对应的是正义联盟的七个成员，第九条通道对应的是瞭望塔，那第八条通道对应的是谁？”斯蒂芬妮突然问。
+
+提姆和杰森都卡了几秒。
+
+“迪克。”最终，提姆说，“只有这一个解释。”
+
+“看起来我们的好大哥确实不简单。”杰森说，视线投向那条看起来温和无害就是灯光好像有点问题一直在不断闪烁的通道，“那走这边？”
+
+“迪克的选项甚至不如闪电侠。”提姆摇摇头。
+
+“理由呢？”
+
+“闪电侠本人是友善且认知正常的，和超人的情况不太一样。超人也是友善的，但他的认知显然有问题。”提姆说，“闪电侠……他的认知可能更偏向于‘人’。”
+
+“而且他的危险性似乎是存在表面上的，就是那些……‘浮雕’。”斯蒂芬妮看着那些不断蠕动的人形轮廓，“说起来，我总觉得那些浮雕很眼熟。”
+
+诚然，抛开诡异不谈的话那些浮雕确实带给三人一种微妙的熟悉感。而在仔细观察片刻之后，三人很快确认了另一件事。
+
+“这些浮雕似乎是同一个人……”斯蒂芬妮嘀咕了一句。
+
+“而且该死的眼熟。”提姆也跟着嘀咕。
+
+杰森：“我突然想起来一件事。”
+
+“？”
+
+“你们记不记得之前迪克说他看见了沃利……？”
+
+提姆、斯蒂芬妮：“……”
+
+两人瞬间悚然。
+
+杰森也忍不住摸了一下自己的胳膊，显然他也被自己给吓着了：“只是个猜测。”
+
+“但你这么一说的话我确实觉得这个‘人’越看越像沃利了。”提姆嘴角一抽，“所以，闪电家族被困在墙里了？”
+
+“甚至可能不止是闪电家族，所有失踪的人都被困在墙里了。”斯蒂芬妮摸了摸自己的胳膊，“而且显然是闪电侠做的。只是沃利在尝试离开，其他人……”
+
+遥远而模糊的呼救声传来，如同风声在瞭望塔内呼啸。这种近乎被吞噬甚至“消化”一般的景象让三人再一次推翻了之前所有的猜测。
+
+正义联盟到底在做什么，他们的目的是什么，他们到底又是什么？
+
+“现在怎么办？”斯蒂芬妮问，“如果情况是最糟糕的那种情况……”
+
+“那我们最好先回去。”杰森说。
+
+“不。”提姆再一次否定了这个建议，“我们走最右边的那条通道。”
+
+“提姆？”斯蒂芬妮大为惊讶，却见到提姆一点动摇的意思都没有。
+
+“解释一下，小红？”杰森问。
+
+“无论正义联盟想做什么、在做什么或者是什么，有一件事是肯定的，就是他们在‘保护’，虽然闪电侠保护的方式看起来可能有些……古怪，而将我们驱离瞭望塔无疑是保护的一环。”提姆说，“也就是说，如果瞭望塔本身会对我们不利的话……”
+
+“他们一定会注意到？”杰森问，“但既然如此的话，为什么不直接随便选一条通道呢？”
+
+“因为其他人的目的都是‘驱离’，显而易见。”提姆说，“所以任何一条通道都不可能带着我们更接近真相。但是瞭望塔不一样，他是个小孩……至少他看起来像是小孩。”
+
+“所以她的心智不够成熟，可能反而不会主动驱离我们？”斯蒂芬妮恍然。
+
+“但也可能更危险。”
+
+“从这方面来说选哪条都差不多。”提姆叹息，“难道其他人就不危险了吗？”
+
+两人：“……”
+
+但出乎三人意料的是，这一路走来风平浪静，除了时不时出现一张便利贴上面写着乱七八糟的欢迎词且充满了各种各样的拼写错误之外。不过其实也不是特别风平浪静——只有以他们为半径五米范围内的部分是风平浪静的，除了到处都是便利贴之外没什么问题。
+
+但在这个范围之外……
+
+杰森面无表情的看着一只在海里游泳的蝙蝠追着一颗在天上滚动的太阳跑来跑去，又向前迈了一步。五米范围内涌动的海水转瞬间变成瞭望塔坚实的合金地板，不知从何而来的阳光柔和的照耀着三人，杰森估摸着应该不是正被追的满地乱跑的那颗，主要是光源方向不对劲。
+
+“我总觉得我们在接近一些不该接近的东西。”斯蒂芬妮嘀咕了一句，“瞭望塔上有水族馆，水族馆里有核潜艇……”
+
+迷你太阳在接近到他们附近的时候如雾气一般消散了。
+
+“瞭望塔上没有水族馆。”提姆道，“我在想一件事。”
+
+“什么？”杰森问。
+
+“如果正义联盟的本体真的是某些……嗯，奇怪的东西，他们为什么要瞒着我们呢？”
+
+“或许‘认知’本身就是有害的。”杰森说。
+
+“一群友善的外神——听起来像是洛夫克拉夫特的魔改。”
+
+“怎么，你还想从某个角落冒出一只狗来？”
+
+“首先，廷达罗斯猎犬不是狗，”提姆说着，矮身躲过一只猛扑过来的小氪，这导致他旁边的斯蒂芬妮被狗撞了个正着，“其次……好像确实冒出来了。”
+
+第二只小氪从房间角落的烟雾中浮现，但这只感觉上就像是什么接触不良的全息投影一样——它无声无息的穿过了杰森的身体，闪烁了几下之后就彻底消失不见。
+
+第一只小氪左右看了看，汪了一声，随后身形也如晨雾一般消散。
+
+斯蒂芬妮从地上爬了起来，一边抽出一张纸擦脸一边问了一句：“这是真的小氪吗？”
+
+“换个角度想，兴许从来就没有‘小氪’呢。”杰森回答，“天知道那是个什么东西。”
+
+斯蒂芬妮正准备说点什么，突然脚下一空差点摔倒，幸好提姆和杰森立刻伸手讲她拉了回来。面前本来应该通往舰桥的走廊被突兀截断，切口平滑如镜，尽头直通宇宙真空。而在这真空之中闪烁着一片金光。
+
+“……<span class="spoiler">早知如此，应该让别人在这里守着的。</span>⚶⍟☧，♃☧⛯⚶☬☙'♱⚣ ☫⚶♃♇ ⛤⌘☙⚣ ♃⛯⛤⚣⛯⚧⚣ ⚣☬♃⚣ ☙⛯ ⸘♇。”
+
+这是他们三人在窒息之前听到的最后一句话。
+
+……
+
+芭芭拉把邪教的资料整理好之后发给了泰坦们，感觉心力憔悴。
+
+不难理解，你要是看到那么个精神污染的玩意儿你也会精神憔悴的，这一点甚至不需要什么超自然力量，光文字本身就够受的了。
+
+显然泰坦们对此也有一样的看法——迫害完同伴之后，大伙对于这个邪教就只剩下疲惫了，尤其是这群老鼠东躲西藏到处乱蹿还贼不好抓——他们为此甚至跟卢瑟达成了共识，这真是个奇迹。虽然卢瑟对于这件事的看法除了共通的“邪教徒真离谱”之外还有“为什么他们会崇拜那个氪星人？！”的部分，但无论如何，泰坦们在大都会开展了对真实太阳教的剿灭行动。
+
+“话又说回来了，”星火看着被警察带走的时候还在大喊“伪日必将坠落”的邪教徒，有件事始终没想明白，“明明超人自己都说了他是个氪星人，为什么这群邪教徒坚持认为超人是个太阳？”
+
+“邪教徒的脑子一般人理解不了的，超人跟太阳在物理上最接近的关系应该也就是他是太阳能的，”罗伊道，“其实我觉得他们可能对‘太阳’都没什么认知，那么大颗恒星要怎么才能‘坠落’？”
+
+“之前审讯的时候他们好像是说超人是‘被伪日篡夺了权柄从而坠地的真日’，”维克多回忆了一下，“总之神神叨叨的。”
+
+“一颗恒星掉到了地球上，地球却还平安无事，这件事本身就很离谱了。”星火叹息。
+
+真实太阳教并不是他们唯一头疼的邪教，随着正义联盟失踪的日子渐长，各个城市都冒出来了不少崇拜正义联盟的邪教，真实太阳教是里面最疯狂的一个，但其他的邪教的各种操作也不遑多让。抛开里面为了骗信徒钱的那些不谈（占据了绝大多数），那些正儿八经真的信仰正义联盟的邪教里有一个共同的特点，就是都很颠。
+
+不只是信徒很颠，他们的圣经也很颠。
+
+“之前海滨城有一个崇拜哈尔的邪教，觉得灯团窃取了哈尔的力量。”星火长叹一声，“这个因果关系要不是搞反了的话那还是挺正确的。”
+
+“中心城也有类似的邪教，教义一模一样的，只不过对象变成了闪电侠。”
+
+“之前还有个崇拜海王的邪教，教义居然是鼓动信徒投海自杀，他们说这是‘和水之意志融为一体’，是什么‘无上的荣耀’，差点没救回来。”
+
+“崇拜女侠那个才离谱呢，喊着什么‘以神的名义精华这充满谎言的世界’就去白宫搞自杀式恐怖袭击去了，都不知道炸弹哪儿来的……”
+
+“怕不是哥谭送出去的。”
+
+不过说起哥谭来，几人倒是突然想起来了一件事。
+
+“说起来，哥谭为什么没有崇拜蝙蝠的邪教的？”星火有点疑惑。
+
+野兽小子寻思了一下：“……你真的觉得会有人崇拜蝙蝠侠吗？当然我没有说他不好的意思，就是他的行事风格……”
+
+星火：“……”
+
+阿卡姆内。
+
+“我看见了！我看见了！那温暖的黑暗！那编织命运的蛛网！那吞噬噩梦的阴影！为什么不承认？！为什么不接受我们的供奉？！……”
+
+这激烈到近乎嚎啕的嘶吼声让埃利亚斯·布莱克的脚步略微一顿。
+
+“新进来的？”他问身旁的护工。
+
+护工点头：“几日前刚被送进来，镇定剂是普通剂量的1.2倍，但还是……这个表现。”
+
+“加大剂量。”埃利亚斯冷声吩咐，“不要让主听到这些噪音。”
+
+护工无声垂首，随后隐入阴影之中。
+
+## Chapter 7
+
+黑暗。
+
+无穷无尽、没有尽头的黑暗。
+
+然后是被包覆的触感，如同婴儿回到了母亲的羊水，又像是暴雨时坐在家里窗边注视着雨幕的宁静。
+
+黑暗是冰冷但温柔的，却又有一种奇异的热度。
+
+粘稠如同沥青一般的黑暗翻涌着，触碰他，包覆他，消化他。
+
+那种柔和的热度仿佛能够融化一切危险的东西，取而代之的是最纯粹的守护，这让他不自觉的调整了一下自己的姿势，几乎就要这样睡过去，让自己彻底沉浸在这种宁静之中。
+
+“回神，杰森。”
+
+一个熟悉的声音让杰森猛然惊醒，他吓得直接跳了起来，下意识的去摸武器却摸了个空，或者，准确来说，他什么都没“触碰”到。
+
+那里什么都没有，不只是枪，还有身体本身。
+
+之前在真空中行动的记忆骤然浮现，一种迟来的窒息感几乎让杰森差点又昏迷过去，好在那个声音再次响起：“呼吸，杰森，你可以呼吸了。”
+
+空气瞬间涌入肺里，窒息感猛然褪去，杰森剧烈的咳嗽了起来，头晕目眩了好一会才终于回复了个大概。他看向声音传来的方向，却没在那个方向看到任何东西。
+
+“别看，别想，呼吸。”迪克的声音似乎就在他耳边响起，“你在这里很安全。”
+
+杰森定了定神：“迪克？”
+
+“是我。”迪克肯定了杰森的问题。
+
+“这是哪儿？你在哪儿？这又是……什么情况？”
+
+“等会再解释。”迪克说，声音听起来似乎有点紧张，“先听我说，闭上眼睛，向前走，不用担心撞到什么东西或者摔跤，你不会的。一直向前走，除了呼吸什么都不要想，等我让你睁开眼睛你再睁开眼睛。然后当你睁开眼睛的时候，不管看到什么都不要去思考，只去认知，明白了吗？”
+
+杰森点点头——这话虽然听起来有些莫名其妙，但对迪克的天然信任以及刚才发生的事情还是让杰森服从了他的安排。他闭上眼睛行走在这片无边无际的黑暗中，身周的阴影如同海水一般翻涌蠕动着想要再次将他包覆起来，却被一道柔和却炽热的光芒隔离，始终没有任何一片浪花触及到光芒之内的任何东西。
+
+尽管光芒之内没有东西。
+
+“杰森·托德。”
+
+明亮的阴影思考着。
+
+“第二位罗宾。”
+
+有文字在半空浮现，神圣如同祭文。
+
+“失而复得。”
+
+一个看起来像是粗糙3d人形建模的东西出现在了无边无际的黑暗中，他僵硬的行走着，并随着行走逐渐演化出了更多的细节。
+
+“布鲁斯·韦恩深爱着他。”
+
+“人性之锚。”
+
+“愤怒、仇恨、爱，如此鲜明。”
+
+“他会是美味的食物。”
+
+明亮的阴影思绪一顿，忽然眨了眨眼睛，盯着最后一条出现的语句看了几秒，随后面无表情的把最后一条思绪拽了下来，掰折之后几口吃掉。
+
+“等事情解决了之后去啃两口克拉克吧。”
+
+迪克面无表情的想。
+
+饿了.jpg。
+
+有阴影突然靠近，柔和的将他包裹。迪克嘴角一抽，身周的光影蠕动了一下：“……谢谢你，阿尔弗雷德，但我觉得布鲁斯还是留着力量对付狂笑吧。”
+
+于是黑暗再次如同潮水一般褪去。
+
+杰森不知道自己走了多久，或许在这片全然的黑暗中本来就没有时间的概念，或许是几天，或许是几秒，也或许是永恒。在无数个无穷短的瞬间过去之后，杰森听到了迪克的声音：“睁开眼睛，杰森，记住，不要思考。”
+
+于是杰森睁开了眼睛。
+
+他看见了一团明亮的阴影，以及提姆和斯蒂芬妮——提姆看到他的时候明显松了口气，斯蒂芬妮更是直接跑了过来：“你没事吧？”
+
+“我……没事。”杰森迟疑着说，谨慎的把自己的注意力集中在控制呼吸上，而不是去思考自己到底看见了个什么东西，这让他看起来比平时更加迟钝了，“这到底是怎么回事？”
+
+“我不能说，你们也别问，”明亮的阴影中传来了迪克的声音，“知道的太多对人类没好处，各种意义上的。”
+
+“认知本身就是污染。”提姆补充，“就像你之前猜测的那样。”
+
+“好吧，所以现在我们要干什么？”杰森问。
+
+“本来的理想情况是你们最好啥都别干，就待在地球上，这也就是为什么我没让你们跟我一起过来，”迪克说，“但既然事已至此就来帮个忙吧。布鲁斯现在状况很糟，或许你们的存在能帮他。”
+
+提姆停顿了一下：“该怎么做？”
+
+光芒抬手，画出了一个直径大概三米的圈，正好把三人圈在里面：“待在这个圈里，然后闲聊——和布鲁斯有关的、和你们有关的，什么都可以。”
+
+“就只是这样？”斯蒂芬妮疑惑道。
+
+“剩下的我来解决。”迪克言简意赅地回答，他的注意力似乎已经大部分都不在他们身上了。周围的黑暗中逐渐浮现出了一些似乎是试图从主体分离出去的、更加狂躁扭曲的阴影碎片，又被他强行按了回去。
+
+那些碎片隐约呈现出疯狂的笑脸，但旋即就消失在了阴影之中。
+
+忽然，迪克偏了偏头，随后露出有点无奈的表情：“……知道了知道了，反正总得有一个进锅里，你说你到底是在费什么劲……”
+
+“迪克，你在跟谁说话？”斯蒂芬妮小声问。
+
+“布鲁斯，还能有谁。”迪克说，语气里有点疲惫疲惫，“他快气疯了，主要是对克拉克，顺便也对你们……哦，还有对我——啊他还有脸对我生气，我都快要气疯了。”
+
+黑暗猛然翻涌起来。
+
+“阿尔弗雷德你管管他啊！”
+
+黑暗回归平静。
+
+三只小鸟：“……”
+
+杰森硬是被眼前的景象气乐了，并且第一个放弃了思考。“就是随便说话是吧？”他见到迪克点头，便转身朝着黑暗大喊，“老头！不管你是什么，别想就这么跑了！我可还没原谅你呢！你要是敢不回来，我回去之后第一个撬你蝙蝠车的轮胎！”
+
+“算我一个算我一个！”斯蒂芬妮很快乐地说，“我早就想试试了！”
+
+杰森竖起大拇指：“我在这方面可是很有经验的。”
+
+提姆顿了顿，无奈地叹息一声：“下次别在董事会上睡觉了，布鲁斯。”
+
+“他能去董事会都不容易吧？”
+
+“有时候我都觉得这个家里到底谁姓韦恩——”提姆抱怨了一句，冰蓝色的眸里却蕴着笑意，“说起来你们记不记得上一次他在冰山俱乐部……”
+
+黑暗再次猛烈的翻涌起来。
+
+迪克：“……”
+
+啊，效果可能太好了。
+
+话虽如此，看到三个如此有活力的人类，迪克还是笑了起来。
+
+——吵闹而又鲜活的生命。
+
+周围的黑暗平静了很多，他能感觉到。那些尖锐的低语退却了，只剩下一种冰冷的恐惧。
+
+让他觉得无比的熟悉和安心的恐惧。
+
+“人真是一种有趣的生物。”光芒在阴影中低语。
+
+迪克对着某个方向微微低下了头，低语。
+
+“是的，夫人，这些是布鲁斯的孩子……不，收养的……不，事情很复杂……呃，达米安是另一回事……不，也没那么复杂，塔利亚她……不是您想的那样，布鲁斯他没有……”
+
+阴影中传来温柔的低语。
+
+“……算了，回头还是让布鲁斯亲自解释吧。”片刻后，迪克叹了口气，“至于现在……”
+
+他能感觉到，一种庞大的、沉默的、近乎笨拙的“注视感”笼罩了他们。
+
+它似乎在确认。
+
+确认这些吵吵闹闹的、总惹麻烦、让他气得要死的小东西们，都还完好无损地在这里，生动地、鲜活地。
+
+没有死去，没有消失。
+
+“哪怕是为了这个，布鲁斯，多坚持一下。”
+
+黑暗蠕动了一下。
+
+“别忘了你等会儿还有个收拾克拉克的KPI呢，达米安也还在等你回家，他现在肯定要气疯了。”
+
+黑暗猛然翻涌了起来。
+
+“……等会随你怎么炖，”迪克说，听起来是摆烂了，但他的眼中却亮起了比以往任何时候都要明亮的光芒，那光芒几乎穿透了黑暗，穿过了无穷远处的每一个角落，“至于现在……该让那个入侵者见识一下什么叫做真正的恐惧了。”
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+真正的恐惧（物理）
+
+很难说这版本的布韦恩的经历和经典版本比起来到底是好是坏，不过狂笑把自家孩子弄死的行为确实对布鲁斯造成了暴击。话又说回来，这个版本的布鲁斯应该是我写过所有版本的蝙蝠侠里面能力最强的一个，哪怕算上[实体蝙蝠侠（包括彩蛋版本的）](关于“蝙蝠侠”及其衍生集群“蝙蝠家族”的观察报告.md)和开了修改器的[玩家蝙蝠侠](【玩家正联】非人之物.md)，毕竟实体蝙蝠侠哪怕按照彩蛋版本来算，他的能力其实也多半体现在“叙事”这个方面（他本人还未必能意识到），他本体的能力也不是特别夸张，而且那个毕竟只是一时兴起的结果，写着玩的，统计的时候可以忽略掉。玩家蝙蝠侠的话再怎么开修改器也只能在游戏允许的限度内破坏，游戏本身是有极限的，至于这边这位吗……
+
+嗯，暂时先不揭秘了。不过他的形态其实来自于之前我跟ds聊不确定性原理的时候聊到最后开的脑洞（但稍作更改，原脑洞是个[量子史莱姆](量子史莱姆.md)来着，一直没找到合适的地方插进去），当然了，这事也不能深聊，毕竟聊着聊着我突然觉得电子跟我家猫一样这事就没法说……
+
+## Chapter 8
+
+感觉这个故事应该已经可以改名叫“除了迪克·格雷森之外所有人都在大冒险”了（乐）
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+该如何描述那超脱了凡人认知之外的伟力呢？
+
+那并非双眼所能捕捉的光影，而是直接烙入意识深处的概念。是温暖与冰冷同时交织的触感，是无限延伸的廊道与骤然坍缩的奇点，是父亲严厉的呵斥与母亲轻柔的摇篮曲被搅拌成一体的混沌之音。
+
+它庞大、古老，却又带着一种新生儿般的笨拙与好奇。
+
+它存在着，存在着，安静地、磅礴地、合理地存在着。
+
+凡人的思维试图为其赋予形象——或许是明亮开朗的笑容，或许是从深蓝到墨黑的渐变，或许是……
+
+……是了。是那瑰丽的、玄奥的、明亮而又闪烁的光芒。那是恒星的热核烈焰，是月球的清冷反光，是白昼明亮的天空，是夜色中闪烁的星辰，光影交织的长子，非昼非夜的神灵。那光在万事万物之中投下阴影，那阴影又在无限久远的时空里散发光芒。
+
+一个念头从凡人的脑海中自然而然地浮现，如同呼吸般本能，带着不容置疑的神圣感：
+
+礼赞。
+
+（……不。）
+
+礼赞，礼赞恒星的长子，礼赞阴影的造物，礼赞那光影相遇的奇迹，日夜相交的黎明！
+
+（不，停下。）
+
+祂是矛盾，祂是统一！祂是撕裂现实的悖论，亦是抚平创伤的和弦！
+
+（这不是我的想法。）
+
+礼赞我们至高至远的天子！礼赞我们至暗至圣的神主！祂的意志即是律法，祂的存在即是恩典！凡祂目光所及，阴影亦将燃烧！凡祂脚步所至，光芒亦当臣服！
+
+（我是芭芭拉·戈登，神谕。）
+
+礼赞！！礼赞！！！礼赞！！！！
+
+（不，我绝对不会……我不崇拜任何……）
+
+愿祂的名被称颂，从地底直至群星！愿祂的国降临，覆盖一切虚妄的现实！……
+
+（不！）
+
+——芭芭拉·戈登猛然从噩梦中惊醒，胸膛剧烈起伏，冷汗浸透了睡衣，那不知从何而来、如同潮水般汹涌的狂热词句仍在她的脑海深处盘旋、轰鸣、嘶吼，余音不绝。
+
+她看向窗外，哥谭的夜空被霓虹灯染成一片浑浊的暗蓝，阴影的触须如同洞窟中的钟乳石一般自天空中垂下，末端散发着温暖又炽热的光辉，温柔的抚慰着苍生。
+
+芭芭拉猛地甩了甩头，幻觉消失了，但那种近乎皈依般的战栗感，却真实地残留在了她的皮肤之上。
+
+厨房的灯被点亮了，芭芭拉盯着水杯出神。此时已经是凌晨两点半，她的父亲显然早已睡下，而芭芭拉也并没有要打扰他的意思。她只是坐在那里盯着水杯，试图清理掉脑海中盘旋不去的阴影。从理性上分析，这大概是看真实太阳教的“圣经”看多了的结果，那些仿佛自带什么精神污染的文字确实让她记忆非常深刻，至于那些幻觉……
+
+啊，大概只是幻觉。
+
+门外有声音传来，芭芭拉听出那是父亲的脚步声。她本来想打开门问问他是不是又加班到这个时候，却听到了他说话的声音，声音压的很低，但芭芭拉依然听得很清楚。
+
+“……不，那部分绝对不行。这不是信仰虔诚与否或者他本人感受的问题，就是那些内容不能让外人看到，阿卡姆就是前车之鉴，而且你也知道他对阿卡姆的态度……”
+
+阿卡姆？
+
+戈登似乎并没有发现厨房有人，依然在跟什么人交谈。
+
+似乎是在……打电话？
+
+凌晨两点半……？
+
+“……别人就算了，你应该也知道他的情况不是祈祷就能恢复的，正义联盟有他们自己的处理方法，你这么做只是在添乱……他们既不需要也不在乎信仰，确实这是对教众的说法，但这件事你自己难道看不出来吗？你看出来了你就是想整？不是，你……”
+
+戈登似乎有点无语。
+
+“行吧。”最后他叹了口气，“至少这次别整乱七八糟的东西了，上次那个黑蜡烛实在太像在召唤什么邪神了……红蜡烛也不行，白的也不行，你自己看着办。我和卢修斯会抽个时间过去的……”
+
+芭芭拉按在门把上的手悄无声息的松开了。
+
+戈登挂了电话，走向自己的卧室。他似乎并没有意识到自己的女儿正在厨房，更没意识到她从头到尾听完了全程的对话。屋里很快又安静了下来，戈登似乎是去休息了，只留下芭芭拉一个人在那里。
+
+芭芭拉谨慎的等到了屋子里彻底安静下来，才悄悄的远离门边。她继续盯着那杯水，脑海中那些混乱的低语彻底远离，取而代之的是更加混乱的思绪。
+
+如果她刚才没听错的话，詹姆斯·戈登，gcpd 的局长，在哥谭工作了几十年的老警察，在崇拜邪神，而且参与了某个邪教团体的运营和祭祀活动——虽然他自己不承认——而且显然权限很高。
+
+说是邪神好像也不准确，应该说是在崇拜“正义联盟”，至少是联盟中的某人。而且不只是他，卢修斯·福克斯似乎也参与其中。
+
+若是以往芭芭拉大概会直接忘掉这件事，毕竟这听起来太超现实了，更象是个玩笑，但在少年英雄们满世界跑着剿灭崇拜正义联盟的邪教团体且她刚刚才从一个奇怪的噩梦中惊醒的情况下，戈登这话对她来说无异于一个惊雷。更重要的是，芭芭拉想起了之前联系泰坦的时候泰坦们随口跟她提过的一个问题。
+
+“哥谭居然没有邪教，甚至就连阿卡姆都挺安静的。”星火当时是这么说的，“不过好像也挺有道理的，蝙蝠侠不太像是能被崇拜的样子，很难想象有人会崇拜他。”
+
+很难想象……吗？
+
+……
+
+杜克接到芭芭拉的通讯的时候是有一点意外的。
+
+诚然，“信标”是一个活跃在哥谭的义警，但他严格来说并不算是蝙蝠家族的成员——虽然合作过几次，但毕竟他父母双全是吧（这一点还要感谢蝙蝠侠）……
+
+“我需要你帮我个忙。”
+
+“什么？”
+
+“跟踪一下戈登局长。”
+
+杜克：“……跟踪你父亲？”
+
+“对。”芭芭拉说，“但不是现在开始，具体是什么时候……不一定。”
+
+听到芭芭拉郑重其事的语气，杜克并没有多问，点头应下：“好。”
+
+让杜克去实属无奈之举——先不提蝙蝠家族现在没空，就算他们有，芭芭拉也不觉得他们能混进那个邪教现场去。让泰坦们去就显得太过激了，被邪教折腾的焦头烂额的泰坦们指不定能应激成什么样子。相比之下，熟悉哥谭环境的杜克是最好的选择。
+
+另一个好消息是芭芭拉很快就等到了时机——事实上，芭芭拉发现，那个所谓的“邪教仪式”就发生在第二天的晚上。
+
+而且整个过程惊人的……公开。
+
+本来杜克从芭芭拉那里得知“邪教崇拜”的时候还惊了一下，脑子里冒出来的念头都是“阴冷黑暗的地下洞窟”“全身黑袍的消瘦人形”“蜡烛阴森的火光”“献祭童男童女”之类的画风，而且集会地点确实是在一个阴冷的地下洞窟，参会人员也确实穿着黑袍，聚会地点确实也有蜡烛——但是电子蜡烛，最顶上是个模拟烛焰的 led 灯泡，而且是金色的，也不知道为什么——更重要的是，他一路跟踪到了集会的入口（一栋写字楼前），正在琢磨怎么潜入的时候突然就被一个和他年纪差不多大的年轻人拍了一下肩膀。
+
+“嘿哥们第一次来？”
+
+“是的。”杜克谨慎的斟酌着用词，“我不太清楚……”
+
+“哦，是新的同胞，”年轻人很愉快地说，“没关系，我带你进去。”
+
+一边说着，他一边带着杜克走进了写字楼，一路坐电梯到了地下。地下是一条天然溶洞形成的通道，门口有两个穿着黑袍而且带着蝙蝠头饰的女性正坐在一张桌子后面。
+
+“嘿，丽莎，玛丽，有第一次来的新同胞。”年轻人很愉快地说，“他大概需要一些帮助。”
+
+“哦，欢迎你，新同胞。”年长一些的女性露出微笑，随后递给他一件黑色的长袍和一个黑色纸袋，纸袋上面印着白色的蝙蝠 logo，“披上这个。”
+
+杜克披上长袍，暂时抑制住了直接打开纸袋看一眼的冲动。他身边的那个年轻人就没那么多顾虑了，披上长袍之后顺便打开纸袋看了一眼，乐了一下：“居然有蝙蝠镖？”
+
+“一比一的仿制品，塑料制的，听说是教主从福克斯先生那里弄来了个原版的，然后仿制了。”年轻些的女性显然对这件事相当津津乐道，“还有今年新修订的圣经。”
+
+在一旁听着的杜克：“……？”
+
+他也终于没忍住打开纸袋看了一眼，瞳孔地震——纸袋里有一本书、一个蝙蝠镖（一看材质就不是真的），一张印着一个黑色蝙蝠标志的深灰色卡片，甚至还有一个 q 版的蝙蝠侠公仔和一个 q 版的罗宾公仔，看制服样式判断的话应该是迪克，做的还挺精巧的。
+
+杜克拿出来卡片看了一眼——那是一张韦恩企业名下超市的礼品卡，面值五百刀……
+
+——有一说一借着邪教的名义敛财的事杜克见多了，第一次见邪教给信徒发钱的。
+
+收好满肚子的槽点，杜克“潜入”了会场，虽然他其实更像是光明正大走进来的。会场情况基本如上所述，如果只看这些的话勉强还能算得上是一个标准的邪教聚会，但从这个角度看的话，洞窟里的蝙蝠气球、“I ❤️ batman”的横幅以及一张摆满了甜点的长桌就实在有点不好理解了……
+
+而且……
+
+杜克看向了洞窟更高处的地方，卢修斯·福克斯、詹姆斯·戈登以及一个他认识但不熟悉的人整站在那里交谈着。那人是埃利亚斯·布莱克，哥谭出了名的慈善商人，算是个小号的布鲁斯·韦恩，小的部分在于他没有韦恩家那么有钱，以及，对于知情人来说，他不是个义警。但这些都不重要，重要的是他们脚下身后有一个祭坛，祭坛上面摆着一些东西，看起来像是一沓纸（总之显然不是童男童女），祭坛下面有一条黑色的地毯直通洞穴的主要出入口，楼梯两侧摆满了蜡烛（就是之前说的金色蜡烛），而在从出入口到祭坛中间的这段地方则摆了十来个玻璃展柜，里面的东西多半是蝙蝠侠和蝙蝠家族在夜巡时因为各种各样的原因而丢掉的装备，主要以包括但不仅限于蝙蝠镖在内的各类投掷物为主，当然也有别的东西，比如破损的披风面具或者某些机械设备上的零件之类的，每一个展台前都围着很多人，且差不多每个人都展现出了一种对这些“圣遗物”地狂热态度，但那种狂热总有点微妙，与其说是信徒对神灵的信仰，不如说是粉丝对正主的追捧……
+
+至少应该不会有正经邪教徒敢在邪教集会上发表类似“我要当蝙蝠侠的狗🤤”之类的言论……吧？
+
+总之这就很难评了——虽然你也可以说这是邪教集会的一部分，但说实话如果他们真的打算召唤邪神降临，而且那个邪神真的是蝙蝠侠的话，以杜克对蝙蝠侠本人的了解，他大概会第一时间把在场的所有人都送去阿卡姆……
+
+## Chapter 9
+
+至于说这次“集会”后来的流程，杜克回去之后是这么跟芭芭拉描述的：
+
+“首先进行的是个人的默祷，随后是献祭，祭品是《韦恩企业的年度财报》和《哥谭年度司法统计公报》，布莱克先生拿了个打火机把这两份文件给扔在火盆里烧了，哦还有一杯咖啡和一盘饼干，后来那杯咖啡被戈登局长喝了，饼干被他们仨分着吃了。在此期间戈登局长还进行了一个简短的发言，主要是介绍了一下 gcpd 过去半年的工作以及哥谭犯罪率的走向。
+
+“然后是一个个人的献祭仪式，大概是每人都能领到一张便利贴——我也不知道为什么是便利贴，反正是有粘性的那种——可以把自己恐惧的东西写下来然后扔进火盆里烧掉，扔的时候还有念一句‘愿恐惧化为主的力量’，布莱克先生宣称的是这个流程之后蝙蝠侠会‘带走’他们的恐惧，但具体怎么个带走法我确实没想明白……
+
+“之后是圣餐，除了那一桌子甜点之外的圣餐，圣餐内容是热可可和苹果派，说实话确实挺好吃的……
+
+“之后是一个‘颂唱’的环节，就是读圣经以及互相交流对蝙蝠侠的……呃，热情。这部分更像是个读书会或者线下粉丝交流会之类的东西，不过我大概听了一下，很多人都分享了自己被蝙蝠侠救援的经历——基本也就是他们成为信徒的契机——也有很多普通的交流，你知道的，一般宗教里会出现的那种信徒互助的感觉，分享一些生活中不如意的事情，然后得到一句‘主会庇佑你’的心理安慰……
+
+“最后理论上来说应该还有个‘神降’的环节，但布莱克先生说‘近日主与祂的长子有要事不便前来’，所以这个环节就被取消了，而剩下的环节就和漫展差不多了……”
+
+听完杜克描述的芭芭拉：“……”
+
+“你确定你没去错地方？”她问。
+
+“反正戈登局长是去的那里。”杜克说，随后他的语气严肃了起来，“不过确实有一件很奇特的事情——我没看到那本圣经的具体内容。”
+
+芭芭拉：“……？”
+
+“在我试图打开书查看内容的时候，我看到的是一片空白，”杜克接着说，“但其他人似乎都能看到书上的文字，甚至有人过来问我是不是也觉得‘主与日星初见’这段写得特别感人……我估计应该是蝙蝠侠和超人的初次见面？但我确实什么都没看见，甚至在他们提到圣经里的具体内容的时候我听到的都是模糊不清的低语。”
+
+芭芭拉皱眉：“那本书呢？”
+
+“融化了，”杜克说，显然有些无奈，“在我回来试图查看那本书的时候，那本书‘融化’成了一滩粘稠的黑色物质，然后又迅速的‘干燥’成了一堆灰烬，其他东西倒是很完整。”
+
+“把你带出来的所有东西都给我，这可能涉及到魔法。”芭芭拉说，“我会去找扎塔娜问问的。”
+
+不知道前因后果的扎塔娜：“这就是一堆灰烬啊？普通的书本被点燃之后剩下的灰烬。”
+
+知道了前因后果的扎塔娜：“……”
+
+芭芭拉：“……”
+
+几秒的沉默。
+
+“我知道你想说什么，但这些东西上面确实没有魔法的痕迹。”扎塔娜说，“或许你该让泰坦们调查一下？”
+
+“考虑到他们最近被邪教组织弄得焦头烂额的现状，我不觉得让他们调查一个邪教是好主意。”芭芭拉摇摇头，“尤其是这个邪教极有可能在哥谭扎根很深，毕竟就连……都参与其中。”
+
+她没说出那两个名字。
+
+“”
