--- a/src/site/notes/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器/","tags":["创作/10_其他/乙女向/否","创作/02_衍生/dc","创作/03_类型/灵感收集","创作/04_进度/不涉及","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器/","noteIcon":""}
 ---
 
 
