--- a/src/site/notes/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2/","tags":["创作/10_其他/乙女向/是","创作/02_衍生/dc","创作/03_类型/故事片段","创作/04_进度/进行中","创作/10_其他/NSFW/否"],"noteIcon":""}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2/","noteIcon":""}
 ---
 
 
